--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -8913,4 +8913,385 @@
   <data name="DRYER - AIR LOCK" xml:space="preserve">
     <value>مجفف - قفل الهواء</value>
   </data>
+  <data name="MIXING" xml:space="preserve">
+    <value>خلط</value>
+  </data>
+  <data name="SELECTION" xml:space="preserve">
+    <value>اختيار</value>
+  </data>
+  <data name="SAMPLE" xml:space="preserve">
+    <value>عينة</value>
+  </data>
+  <data name="COMPONENTSTOPBUTTON" xml:space="preserve">
+    <value>زر إيقاف المكون</value>
+  </data>
+  <data name="ADVANCEDTRENDS" xml:space="preserve">
+    <value>الاتجاهات المتقدمة</value>
+  </data>
+  <data name="VOLTAGE" xml:space="preserve">
+    <value>الجهد االكهربى</value>
+  </data>
+  <data name="POWER" xml:space="preserve">
+    <value>قوة</value>
+  </data>
+  <data name="FREQUENCY" xml:space="preserve">
+    <value>تكرار</value>
+  </data>
+  <data name="NO SPEED REDUCTION" xml:space="preserve">
+    <value>لا تخفيض السرعة</value>
+  </data>
+  <data name="REDUCTION SPEED IN PROGRESS" xml:space="preserve">
+    <value>سرعة التخفيض قيد التقدم</value>
+  </data>
+  <data name="GATE CLOSED" xml:space="preserve">
+    <value>البوابة مغلقة</value>
+  </data>
+  <data name="ACCESS GATE NOT CLOSED" xml:space="preserve">
+    <value>بوابة الوصول غير مغلقة</value>
+  </data>
+  <data name="CHARGING CONVEYOR SAFETY KEY" xml:space="preserve">
+    <value>مفتاح سلامة ناقل الشحن</value>
+  </data>
+  <data name="CHARGING CONVEYOR GATE OPEN PROCEDURE" xml:space="preserve">
+    <value>إجراء فتح بوابة ناقل الشحن</value>
+  </data>
+  <data name="SAFETY PINS LOCKED" xml:space="preserve">
+    <value>دبابيس الأمان مقفلة</value>
+  </data>
+  <data name="SAFETY PINS NOT LOCKED" xml:space="preserve">
+    <value>دبابيس الأمان غير مقفلة</value>
+  </data>
+  <data name="ON REQUEST" xml:space="preserve">
+    <value>تحت الطلب</value>
+  </data>
+  <data name="HYDRAULIC UNIT ON" xml:space="preserve">
+    <value>الوحدة الهيدروليكية قيد التشغيل</value>
+  </data>
+  <data name="DEBALER HYDRAULICS" xml:space="preserve">
+    <value>هيدروليكا ديبالر</value>
+  </data>
+  <data name="HIGH FILLING" xml:space="preserve">
+    <value>تعبئة عالية</value>
+  </data>
+  <data name="CALCULATED FILLLING" xml:space="preserve">
+    <value>الحشوة المحسوبة</value>
+  </data>
+  <data name="(1=RELEASED 0=TRAPPED)" xml:space="preserve">
+    <value>(1=مفرج عنه 0=محاصر)</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT REFERENCE ON)" xml:space="preserve">
+    <value>معطل في الإنتاج (مرجع دائم)</value>
+  </data>
+  <data name="WATER TANK TREATED WATER" xml:space="preserve">
+    <value>خزان المياه المياه المعالجة</value>
+  </data>
+  <data name="WATER TREAMENT SIGNALS" xml:space="preserve">
+    <value>إشارات معالجة المياه</value>
+  </data>
+  <data name="ACCELERATION BELT" xml:space="preserve">
+    <value>حزام التسارع</value>
+  </data>
+  <data name="RUN-OFF SWITCH" xml:space="preserve">
+    <value>مفتاح التشغيل</value>
+  </data>
+  <data name="BELT MISALIGNMENT" xml:space="preserve">
+    <value>اختلال الحزام</value>
+  </data>
+  <data name="SORTER" xml:space="preserve">
+    <value>فارز</value>
+  </data>
+  <data name="GRINDER NOT DISABLED" xml:space="preserve">
+    <value>المطحنة غير معطلة</value>
+  </data>
+  <data name="DECANTER SKIMMER" xml:space="preserve">
+    <value>مقشدة الدورق</value>
+  </data>
+  <data name="OK FOR PROCESS - MAX LEVEL" xml:space="preserve">
+    <value>موافق للعملية - المستوى الأقصى</value>
+  </data>
+  <data name="WAITING TO GO BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>في انتظار الذهاب إلى ما دون المستوى الأقصى</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>تفريغ الوقت تحت المستوى الأقصى</value>
+  </data>
+  <data name="WCE FRESH WATER CLEANING" xml:space="preserve">
+    <value>Wce تنظيف المياه العذبة</value>
+  </data>
+  <data name="WCE STEAM CLEANING" xml:space="preserve">
+    <value>تنظيف بالبخار Wce</value>
+  </data>
+  <data name="SEPARATION TANK TOP DISCHARGE PUMP" xml:space="preserve">
+    <value>مضخة تفريغ أعلى الخزان</value>
+  </data>
+  <data name="SEPARATION TANK TOP PUMP GATE" xml:space="preserve">
+    <value>بوابة المضخة العلوية للخزان</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM DISCHARGE PUMP" xml:space="preserve">
+    <value>مضخة تفريغ أسفل الخزان</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM PUMP GATE" xml:space="preserve">
+    <value>بوابة المضخة السفلية للخزان</value>
+  </data>
+  <data name="WATER TANK WATER PUMP TO 420" xml:space="preserve">
+    <value>مضخة مياه خزان المياه إلى 420</value>
+  </data>
+  <data name="MATERIAL SELECTION" xml:space="preserve">
+    <value>اختيار المواد</value>
+  </data>
+  <data name="PLANT CONFIGURATION" xml:space="preserve">
+    <value>تكوين النبات</value>
+  </data>
+  <data name="HDPE" xml:space="preserve">
+    <value>البولي إثيلين عالي الكثافة</value>
+  </data>
+  <data name="PET" xml:space="preserve">
+    <value>PET</value>
+  </data>
+  <data name="HDPE MATERIAL" xml:space="preserve">
+    <value>مادة البولي إيثيلين عالي الكثافة</value>
+  </data>
+  <data name="PET MATERIAL" xml:space="preserve">
+    <value>مادة PET</value>
+  </data>
+  <data name="SEARCHING HDPE POSITION" xml:space="preserve">
+    <value>البحث عن موقف HDPE</value>
+  </data>
+  <data name="SEARCHING PET POSITION" xml:space="preserve">
+    <value>البحث عن موضع PET</value>
+  </data>
+  <data name="VALVES NOT OK" xml:space="preserve">
+    <value>الصمامات ليست على ما يرام</value>
+  </data>
+  <data name="RINSING REACTOR 1 AGITATOR" xml:space="preserve">
+    <value>مفاعل الشطف 1 المحرض</value>
+  </data>
+  <data name="RINSING REACTOR 2 AGITATOR" xml:space="preserve">
+    <value>مفاعل الشطف 2 المحرض</value>
+  </data>
+  <data name="STATIC RELAY STATUS" xml:space="preserve">
+    <value>حالة التتابع الثابتة</value>
+  </data>
+  <data name="COMMAND HEATING" xml:space="preserve">
+    <value>تسخين الأمر</value>
+  </data>
+  <data name="RESISTOR CURRENT PHASE" xml:space="preserve">
+    <value>المرحلة الحالية المقاوم</value>
+  </data>
+  <data name="STATIC RELAY NOT OK" xml:space="preserve">
+    <value>التتابع الثابت ليس على ما يرام</value>
+  </data>
+  <data name="CURRENT LEAKAGE (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER RESISTOR OFF)" xml:space="preserve">
+    <value>تسرب التيار (الأمبير &gt; 5% من الأمبير الاسمي بعد 5 ثواني من إيقاف المقاوم)</value>
+  </data>
+  <data name="CURRENT PHASE" xml:space="preserve">
+    <value>المرحلة الحالية</value>
+  </data>
+  <data name="SILO LEVEL SENSOR OK" xml:space="preserve">
+    <value>مستشعر مستوى الصومعة حسنًا</value>
+  </data>
+  <data name="SILO LEVEL SENSOR NOT OK FOR FILLING" xml:space="preserve">
+    <value>مستشعر مستوى الصومعة غير مناسب للتعبئة</value>
+  </data>
+  <data name="SILO NOT OVERFULL" xml:space="preserve">
+    <value>الصومعة ليست ممتلئة</value>
+  </data>
+  <data name="SILO OVERFULL" xml:space="preserve">
+    <value>صومعة أوفيرفول</value>
+  </data>
+  <data name="AGITATOR (IN FILLING/DISCHARGING)" xml:space="preserve">
+    <value>المحرض (في التعبئة / التفريغ)</value>
+  </data>
+  <data name="BLOWER" xml:space="preserve">
+    <value>منفاخ</value>
+  </data>
+  <data name="SAMPLING" xml:space="preserve">
+    <value>أخذ العينات</value>
+  </data>
+  <data name="SAMPLE REQUEST" xml:space="preserve">
+    <value>طلب عينة</value>
+  </data>
+  <data name="(1=REQ)" xml:space="preserve">
+    <value>(1=الطلب)</value>
+  </data>
+  <data name="LOCAL REQUEST" xml:space="preserve">
+    <value>الطلب المحلي</value>
+  </data>
+  <data name="PRESS LOCAL PUSH BUTTON TO TAKE A SAMPLE" xml:space="preserve">
+    <value>اضغط على زر الضغط المحلي لأخذ عينة</value>
+  </data>
+  <data name="PROCESS" xml:space="preserve">
+    <value>عملية</value>
+  </data>
+  <data name="BAGS DIVERTER" xml:space="preserve">
+    <value>محول الحقائب</value>
+  </data>
+  <data name="BIG BAGS NOT OK FOR LOADING" xml:space="preserve">
+    <value>الأكياس الكبيرة ليست مناسبة للتحميل</value>
+  </data>
+  <data name="BAGS VIEW" xml:space="preserve">
+    <value>عرض الحقائب</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON ON CABINET HMI" xml:space="preserve">
+    <value>زر ضغط الطوارئ الموجود على الخزانة HMI</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON (F-INPUT)" xml:space="preserve">
+    <value>SYS - زر ضغط الطوارئ (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE VOLTAGE PROTECTION (F-INPUT)" xml:space="preserve">
+    <value>SYS - حماية الجهد الزائد (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - جهاز الحماية من زيادة التيار</value>
+  </data>
+  <data name="SYS - CONTROL MODULE" xml:space="preserve">
+    <value>SYS - وحدة التحكم</value>
+  </data>
+  <data name="SYS - CONTROL MODULE RESET" xml:space="preserve">
+    <value>SYS - إعادة ضبط وحدة التحكم</value>
+  </data>
+  <data name="SYS - AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - جهاز حماية من التيار المتردد</value>
+  </data>
+  <data name="SYS - DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - جهاز حماية التيار المستمر</value>
+  </data>
+  <data name="SYS - MAIN POWER SWITCH (F-INPUT)" xml:space="preserve">
+    <value>SYS - مفتاح الطاقة الرئيسي (F-INPUT)</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON REDUNDANT F-INPUT" xml:space="preserve">
+    <value>SYS - زر ضغط الطوارئ F-INPUT</value>
+  </data>
+  <data name="SYS - COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>SYS - قناة موصل الأوامر Estop</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION IN CABINET HMI" xml:space="preserve">
+    <value>حماية من زيادة الجهد في الخزانة Hmi</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION (HMI)" xml:space="preserve">
+    <value>حماية الجهد الزائد (Hmi)</value>
+  </data>
+  <data name="24 VOLTS ANALOG INPUTS OK" xml:space="preserve">
+    <value>24 فولت المدخلات التناظرية موافق</value>
+  </data>
+  <data name="SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>جهاز حماية الطفرة</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE STATUS OK" xml:space="preserve">
+    <value>حالة وحدة التحكم في التوريد موافق</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE FAULT RESET COMMAND" xml:space="preserve">
+    <value>أمر إعادة تعيين خطأ وحدة التحكم في الإمداد</value>
+  </data>
+  <data name="SURGE PROTECTION" xml:space="preserve">
+    <value>الحماية من الطفرة</value>
+  </data>
+  <data name="OVERLOAD SUPPLY CONTROL MODULE" xml:space="preserve">
+    <value>وحدة التحكم في الإمداد الزائد</value>
+  </data>
+  <data name="PROFINET COMMUNICATION BREAKDOWN" xml:space="preserve">
+    <value>انهيار الاتصالات Profinet</value>
+  </data>
+  <data name="AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>جهاز حماية التيار المتردد</value>
+  </data>
+  <data name="DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>جهاز حماية التيار المستمر</value>
+  </data>
+  <data name="POWER SWITCH ON" xml:space="preserve">
+    <value>تشغيل مفتاح الطاقة</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON REDUNDANT" xml:space="preserve">
+    <value>زر ضغط الطوارئ زائدة عن الحاجة</value>
+  </data>
+  <data name="COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>الأمر Estop قناة المقاولين</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 0 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>زر الضغط على Estop 0 - عطل في الأجهزة (تخميل الإدخال)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 1 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>زر الضغط على Estop 1 - عطل في الأجهزة (تخميل الإدخال)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 2 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Estop Push-Button 2 - عطل في الأجهزة (تخميل الإدخال)</value>
+  </data>
+  <data name="CABINET MAIN POWER SURGE PROTECTION" xml:space="preserve">
+    <value>حماية من زيادة الطاقة الرئيسية للخزانة</value>
+  </data>
+  <data name="CABINET POWER SUPPLY 24VDC SURGE PROTECTION" xml:space="preserve">
+    <value>خزانة إمداد الطاقة 24 فولت تيار مستمر، حماية من زيادة التيار</value>
+  </data>
+  <data name="POWER ANALYZER" xml:space="preserve">
+    <value>محلل الطاقة</value>
+  </data>
+  <data name="CABINET LINE HIGH VOLTAGE" xml:space="preserve">
+    <value>خط الخزانة ذو الجهد العالي</value>
+  </data>
+  <data name="CABINET LINE HIGH CURRENT" xml:space="preserve">
+    <value>خط الخزانة عالي التيار</value>
+  </data>
+  <data name="CABINET LINE VOLTAGE UNBALANCED" xml:space="preserve">
+    <value>جهد خط الخزانة غير متوازن</value>
+  </data>
+  <data name="CABINET LINE CURRENT UNBALANCED" xml:space="preserve">
+    <value>خط الخزانة الحالي غير متوازن</value>
+  </data>
+  <data name="LINE FREQUENCY OUT OF TOLERANCE" xml:space="preserve">
+    <value>تردد الخط خارج التسامح</value>
+  </data>
+  <data name="POWER METER GENERAL ALARM" xml:space="preserve">
+    <value>إنذار عام لعداد الطاقة</value>
+  </data>
+  <data name="LINE VOLTAGE" xml:space="preserve">
+    <value>خط الجهد</value>
+  </data>
+  <data name="AMPLITUDE UNBALANCED" xml:space="preserve">
+    <value>السعة غير متوازنة</value>
+  </data>
+  <data name="LINE CURRENT" xml:space="preserve">
+    <value>الخط الحالي</value>
+  </data>
+  <data name="ACTIVE POWER" xml:space="preserve">
+    <value>الطاقة النشطة</value>
+  </data>
+  <data name="REACTIVE POWER" xml:space="preserve">
+    <value>قوة رد الفعل</value>
+  </data>
+  <data name="POWER FACTOR (COS-PHI)" xml:space="preserve">
+    <value>عامل الطاقة (كوس فاي)</value>
+  </data>
+  <data name="LINE FREQUENCY" xml:space="preserve">
+    <value>تردد الخط</value>
+  </data>
+  <data name="SYSTEM" xml:space="preserve">
+    <value>نظام</value>
+  </data>
+  <data name="INFO_POWER_METER_1" xml:space="preserve">
+    <value>تم اكتشاف الجهد العالي لإمدادات الطاقة في الخزانة! اتصل بمورد الطاقة الخاص بك</value>
+  </data>
+  <data name="INFO_POWER_METER_2" xml:space="preserve">
+    <value>تم اكتشاف مصدر طاقة مرتفع للخزانة! تحقق من تحميل الخزانة</value>
+  </data>
+  <data name="INFO_POWER_METER_3" xml:space="preserve">
+    <value>تم الكشف عن عدم توازن الجهد الكهربي في وحدة إمداد الطاقة في الخزانة! اتصل بمورد الطاقة الخاص بك</value>
+  </data>
+  <data name="INFO_POWER_METER_4" xml:space="preserve">
+    <value>تم اكتشاف عدم توازن التيار الكهربائي في الخزانة! تحقق من جميع أحمال الخزانة مرحلة تلو الأخرى</value>
+  </data>
+  <data name="INFO_POWER_METER_5" xml:space="preserve">
+    <value>الحالة الخاطئة لمقياس الطاقة في الخزانة - تحقق منه محليًا وأعد ضبط الخطأ</value>
+  </data>
+  <data name="INFO_POWER_METER_6" xml:space="preserve">
+    <value>عداد طاقة الخزانة معيب في وضع عدم الاتصال - تحقق من اتصال ProfiNet بالجهاز</value>
+  </data>
+  <data name="INFO_POWER_METER_7" xml:space="preserve">
+    <value>تردد خط إمداد الطاقة لمجلس الوزراء خارج نطاق التسامح! اتصل بمورد الطاقة الخاص بك</value>
+  </data>
+  <data name="INFO_AMP_12" xml:space="preserve">
+    <value>تحقق من الجهاز منذ اكتشاف الدورة الدموية الحالية عند إيقاف تشغيل الجهاز</value>
+  </data>
+  <data name="INFO_SYS_35" xml:space="preserve">
+    <value>تحقق من كابل Profinet والموصلات ووحدة إمداد الطاقة بوحدة الاتصال</value>
+  </data>
 </root>
