--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -8913,4 +8913,385 @@
   <data name="DRYER - AIR LOCK" xml:space="preserve">
     <value>Trockner – Luftschleuse</value>
   </data>
+  <data name="MIXING" xml:space="preserve">
+    <value>Mischen</value>
+  </data>
+  <data name="SELECTION" xml:space="preserve">
+    <value>Auswahl</value>
+  </data>
+  <data name="SAMPLE" xml:space="preserve">
+    <value>Probe</value>
+  </data>
+  <data name="COMPONENTSTOPBUTTON" xml:space="preserve">
+    <value>Komponenten-Stopp-Taste</value>
+  </data>
+  <data name="ADVANCEDTRENDS" xml:space="preserve">
+    <value>ErweiterteTrends</value>
+  </data>
+  <data name="VOLTAGE" xml:space="preserve">
+    <value>Stromspannung</value>
+  </data>
+  <data name="POWER" xml:space="preserve">
+    <value>Leistung</value>
+  </data>
+  <data name="FREQUENCY" xml:space="preserve">
+    <value>Frequenz</value>
+  </data>
+  <data name="NO SPEED REDUCTION" xml:space="preserve">
+    <value>Keine Geschwindigkeitsreduzierung</value>
+  </data>
+  <data name="REDUCTION SPEED IN PROGRESS" xml:space="preserve">
+    <value>Reduzierungsgeschwindigkeit läuft</value>
+  </data>
+  <data name="GATE CLOSED" xml:space="preserve">
+    <value>Tor geschlossen</value>
+  </data>
+  <data name="ACCESS GATE NOT CLOSED" xml:space="preserve">
+    <value>Zugangstor nicht geschlossen</value>
+  </data>
+  <data name="CHARGING CONVEYOR SAFETY KEY" xml:space="preserve">
+    <value>Sicherheitsschlüssel für Ladeförderer</value>
+  </data>
+  <data name="CHARGING CONVEYOR GATE OPEN PROCEDURE" xml:space="preserve">
+    <value>Verfahren zum Öffnen des Ladeförderertors</value>
+  </data>
+  <data name="SAFETY PINS LOCKED" xml:space="preserve">
+    <value>Sicherheitsnadeln verriegelt</value>
+  </data>
+  <data name="SAFETY PINS NOT LOCKED" xml:space="preserve">
+    <value>Sicherheitsnadeln nicht verriegelt</value>
+  </data>
+  <data name="ON REQUEST" xml:space="preserve">
+    <value>Auf Anfrage</value>
+  </data>
+  <data name="HYDRAULIC UNIT ON" xml:space="preserve">
+    <value>Hydraulikeinheit eingeschaltet</value>
+  </data>
+  <data name="DEBALER HYDRAULICS" xml:space="preserve">
+    <value>Debaler-Hydraulik</value>
+  </data>
+  <data name="HIGH FILLING" xml:space="preserve">
+    <value>Hohe Füllung</value>
+  </data>
+  <data name="CALCULATED FILLLING" xml:space="preserve">
+    <value>Berechnete Füllung</value>
+  </data>
+  <data name="(1=RELEASED 0=TRAPPED)" xml:space="preserve">
+    <value>(1=Freigegeben 0=Gefangen)</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT REFERENCE ON)" xml:space="preserve">
+    <value>In der Produktion deaktiviert (konstante Referenz aktiviert)</value>
+  </data>
+  <data name="WATER TANK TREATED WATER" xml:space="preserve">
+    <value>Wassertank Aufbereitetes Wasser</value>
+  </data>
+  <data name="WATER TREAMENT SIGNALS" xml:space="preserve">
+    <value>Signale zur Wasseraufbereitung</value>
+  </data>
+  <data name="ACCELERATION BELT" xml:space="preserve">
+    <value>Beschleunigungsgürtel</value>
+  </data>
+  <data name="RUN-OFF SWITCH" xml:space="preserve">
+    <value>Auslaufschalter</value>
+  </data>
+  <data name="BELT MISALIGNMENT" xml:space="preserve">
+    <value>Fehlausrichtung des Riemens</value>
+  </data>
+  <data name="SORTER" xml:space="preserve">
+    <value>Sorter</value>
+  </data>
+  <data name="GRINDER NOT DISABLED" xml:space="preserve">
+    <value>Mühle nicht deaktiviert</value>
+  </data>
+  <data name="DECANTER SKIMMER" xml:space="preserve">
+    <value>Dekanter-Skimmer</value>
+  </data>
+  <data name="OK FOR PROCESS - MAX LEVEL" xml:space="preserve">
+    <value>Ok für Prozess – Max. Level</value>
+  </data>
+  <data name="WAITING TO GO BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Warten darauf, das maximale Niveau zu unterschreiten</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Entleerungszeit unter maximalem Füllstand</value>
+  </data>
+  <data name="WCE FRESH WATER CLEANING" xml:space="preserve">
+    <value>Wce Frischwasserreinigung</value>
+  </data>
+  <data name="WCE STEAM CLEANING" xml:space="preserve">
+    <value>WCE-Dampfreinigung</value>
+  </data>
+  <data name="SEPARATION TANK TOP DISCHARGE PUMP" xml:space="preserve">
+    <value>Abscheidetank-Top-Entleerungspumpe</value>
+  </data>
+  <data name="SEPARATION TANK TOP PUMP GATE" xml:space="preserve">
+    <value>Trenntank-Top-Pumpentor</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM DISCHARGE PUMP" xml:space="preserve">
+    <value>Bodenentleerungspumpe des Trennbehälters</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM PUMP GATE" xml:space="preserve">
+    <value>Pumpentor am Boden des Trenntanks</value>
+  </data>
+  <data name="WATER TANK WATER PUMP TO 420" xml:space="preserve">
+    <value>Wassertank-Wasserpumpe bis 420</value>
+  </data>
+  <data name="MATERIAL SELECTION" xml:space="preserve">
+    <value>Materialauswahl</value>
+  </data>
+  <data name="PLANT CONFIGURATION" xml:space="preserve">
+    <value>Anlagenkonfiguration</value>
+  </data>
+  <data name="HDPE" xml:space="preserve">
+    <value>HDPE</value>
+  </data>
+  <data name="PET" xml:space="preserve">
+    <value>PET</value>
+  </data>
+  <data name="HDPE MATERIAL" xml:space="preserve">
+    <value>HDPE-Material</value>
+  </data>
+  <data name="PET MATERIAL" xml:space="preserve">
+    <value>PET-Material</value>
+  </data>
+  <data name="SEARCHING HDPE POSITION" xml:space="preserve">
+    <value>Suche nach HDPE-Position</value>
+  </data>
+  <data name="SEARCHING PET POSITION" xml:space="preserve">
+    <value>Suche nach PET-Position</value>
+  </data>
+  <data name="VALVES NOT OK" xml:space="preserve">
+    <value>Ventile nicht in Ordnung</value>
+  </data>
+  <data name="RINSING REACTOR 1 AGITATOR" xml:space="preserve">
+    <value>Spülreaktor 1 Rührwerk</value>
+  </data>
+  <data name="RINSING REACTOR 2 AGITATOR" xml:space="preserve">
+    <value>Spülreaktor 2 Rührwerk</value>
+  </data>
+  <data name="STATIC RELAY STATUS" xml:space="preserve">
+    <value>Statischer Relaisstatus</value>
+  </data>
+  <data name="COMMAND HEATING" xml:space="preserve">
+    <value>Befehlsheizung</value>
+  </data>
+  <data name="RESISTOR CURRENT PHASE" xml:space="preserve">
+    <value>Widerstandsstromphase</value>
+  </data>
+  <data name="STATIC RELAY NOT OK" xml:space="preserve">
+    <value>Statisches Relais nicht in Ordnung</value>
+  </data>
+  <data name="CURRENT LEAKAGE (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER RESISTOR OFF)" xml:space="preserve">
+    <value>Stromverlust (Verstärker &gt; 5 % des Nennstroms 5 Sek. nach dem Ausschalten des Widerstands)</value>
+  </data>
+  <data name="CURRENT PHASE" xml:space="preserve">
+    <value>Aktuelle Phase</value>
+  </data>
+  <data name="SILO LEVEL SENSOR OK" xml:space="preserve">
+    <value>Silo-Füllstandsensor ok</value>
+  </data>
+  <data name="SILO LEVEL SENSOR NOT OK FOR FILLING" xml:space="preserve">
+    <value>Silo-Füllstandsensor zum Befüllen nicht geeignet</value>
+  </data>
+  <data name="SILO NOT OVERFULL" xml:space="preserve">
+    <value>Silo nicht überfüllt</value>
+  </data>
+  <data name="SILO OVERFULL" xml:space="preserve">
+    <value>Silo überfüllt</value>
+  </data>
+  <data name="AGITATOR (IN FILLING/DISCHARGING)" xml:space="preserve">
+    <value>Rührwerk (beim Befüllen/Entladen)</value>
+  </data>
+  <data name="BLOWER" xml:space="preserve">
+    <value>Gebläse</value>
+  </data>
+  <data name="SAMPLING" xml:space="preserve">
+    <value>Probenahme</value>
+  </data>
+  <data name="SAMPLE REQUEST" xml:space="preserve">
+    <value>Musteranfrage</value>
+  </data>
+  <data name="(1=REQ)" xml:space="preserve">
+    <value>(1=REQ)</value>
+  </data>
+  <data name="LOCAL REQUEST" xml:space="preserve">
+    <value>Lokale Anfrage</value>
+  </data>
+  <data name="PRESS LOCAL PUSH BUTTON TO TAKE A SAMPLE" xml:space="preserve">
+    <value>Drücken Sie die lokale Drucktaste, um eine Probe zu entnehmen</value>
+  </data>
+  <data name="PROCESS" xml:space="preserve">
+    <value>Verfahren</value>
+  </data>
+  <data name="BAGS DIVERTER" xml:space="preserve">
+    <value>Taschenumsteller</value>
+  </data>
+  <data name="BIG BAGS NOT OK FOR LOADING" xml:space="preserve">
+    <value>Big Bags sind zum Beladen nicht geeignet</value>
+  </data>
+  <data name="BAGS VIEW" xml:space="preserve">
+    <value>Taschenansicht</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON ON CABINET HMI" xml:space="preserve">
+    <value>Notruftaste auf der Schaltschrank-HMI</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON (F-INPUT)" xml:space="preserve">
+    <value>SYS – Notruftaste (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE VOLTAGE PROTECTION (F-INPUT)" xml:space="preserve">
+    <value>SYS – Überspannungsschutz (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS – Überspannungsschutzgerät</value>
+  </data>
+  <data name="SYS - CONTROL MODULE" xml:space="preserve">
+    <value>SYS – Steuermodul</value>
+  </data>
+  <data name="SYS - CONTROL MODULE RESET" xml:space="preserve">
+    <value>SYS – Zurücksetzen des Steuermoduls</value>
+  </data>
+  <data name="SYS - AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS – AC-Überspannungsschutzgerät</value>
+  </data>
+  <data name="SYS - DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS – DC-Überspannungsschutzgerät</value>
+  </data>
+  <data name="SYS - MAIN POWER SWITCH (F-INPUT)" xml:space="preserve">
+    <value>SYS – Hauptnetzschalter (F-INPUT)</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON REDUNDANT F-INPUT" xml:space="preserve">
+    <value>SYS – Redundanter F-EINGANG mit Notruftaste</value>
+  </data>
+  <data name="SYS - COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>SYS – Befehls-Estop-Schützkanal</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION IN CABINET HMI" xml:space="preserve">
+    <value>Überspannungsschutz im Schrank Hmi</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION (HMI)" xml:space="preserve">
+    <value>Überspannungsschutz (Hmi)</value>
+  </data>
+  <data name="24 VOLTS ANALOG INPUTS OK" xml:space="preserve">
+    <value>24 Volt Analogeingänge Ok</value>
+  </data>
+  <data name="SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Überspannungsschutzgerät</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE STATUS OK" xml:space="preserve">
+    <value>Status des Versorgungssteuermoduls ok</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE FAULT RESET COMMAND" xml:space="preserve">
+    <value>Befehl zum Zurücksetzen des Fehlers des Versorgungssteuermoduls</value>
+  </data>
+  <data name="SURGE PROTECTION" xml:space="preserve">
+    <value>Überspannungsschutz</value>
+  </data>
+  <data name="OVERLOAD SUPPLY CONTROL MODULE" xml:space="preserve">
+    <value>Überlastungsversorgungssteuermodul</value>
+  </data>
+  <data name="PROFINET COMMUNICATION BREAKDOWN" xml:space="preserve">
+    <value>Aufschlüsselung der Profinet-Kommunikation</value>
+  </data>
+  <data name="AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>AC-Überspannungsschutzgerät</value>
+  </data>
+  <data name="DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>DC-Überspannungsschutzgerät</value>
+  </data>
+  <data name="POWER SWITCH ON" xml:space="preserve">
+    <value>Netzschalter EIN</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON REDUNDANT" xml:space="preserve">
+    <value>Redundanter Notrufknopf</value>
+  </data>
+  <data name="COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>Befehl Estop-Schützkanal</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 0 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Not-Aus-Taste 0 – Hardwarefehler (Eingangspassivierung)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 1 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Not-Aus-Taste 1 – Hardwarefehler (Eingangspassivierung)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 2 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Not-Aus-Taste 2 – Hardwarefehler (Eingangspassivierung)</value>
+  </data>
+  <data name="CABINET MAIN POWER SURGE PROTECTION" xml:space="preserve">
+    <value>Überspannungsschutz für die Hauptstromversorgung des Schranks</value>
+  </data>
+  <data name="CABINET POWER SUPPLY 24VDC SURGE PROTECTION" xml:space="preserve">
+    <value>Schranknetzteil 24Vdc Überspannungsschutz</value>
+  </data>
+  <data name="POWER ANALYZER" xml:space="preserve">
+    <value>Leistungsanalysator</value>
+  </data>
+  <data name="CABINET LINE HIGH VOLTAGE" xml:space="preserve">
+    <value>Schrankleitung Hochspannung</value>
+  </data>
+  <data name="CABINET LINE HIGH CURRENT" xml:space="preserve">
+    <value>Schrankleitung Hochstrom</value>
+  </data>
+  <data name="CABINET LINE VOLTAGE UNBALANCED" xml:space="preserve">
+    <value>Schrankleitungsspannung unsymmetrisch</value>
+  </data>
+  <data name="CABINET LINE CURRENT UNBALANCED" xml:space="preserve">
+    <value>Schrankleitungsstrom unsymmetrisch</value>
+  </data>
+  <data name="LINE FREQUENCY OUT OF TOLERANCE" xml:space="preserve">
+    <value>Netzfrequenz außerhalb der Toleranz</value>
+  </data>
+  <data name="POWER METER GENERAL ALARM" xml:space="preserve">
+    <value>Allgemeiner Alarm des Leistungsmessers</value>
+  </data>
+  <data name="LINE VOLTAGE" xml:space="preserve">
+    <value>Leitungsspannung</value>
+  </data>
+  <data name="AMPLITUDE UNBALANCED" xml:space="preserve">
+    <value>Amplitude unausgeglichen</value>
+  </data>
+  <data name="LINE CURRENT" xml:space="preserve">
+    <value>Leitungsstrom</value>
+  </data>
+  <data name="ACTIVE POWER" xml:space="preserve">
+    <value>Wirkleistung</value>
+  </data>
+  <data name="REACTIVE POWER" xml:space="preserve">
+    <value>Blindleistung</value>
+  </data>
+  <data name="POWER FACTOR (COS-PHI)" xml:space="preserve">
+    <value>Leistungsfaktor (Cos-Phi)</value>
+  </data>
+  <data name="LINE FREQUENCY" xml:space="preserve">
+    <value>Netzfrequenz</value>
+  </data>
+  <data name="SYSTEM" xml:space="preserve">
+    <value>System</value>
+  </data>
+  <data name="INFO_POWER_METER_1" xml:space="preserve">
+    <value>Hohe Spannung im Schranknetzteil erkannt! Kontaktieren Sie Ihren Energieversorger</value>
+  </data>
+  <data name="INFO_POWER_METER_2" xml:space="preserve">
+    <value>Hoher Strom im Schranknetzteil erkannt! Überprüfen Sie die Schranklast</value>
+  </data>
+  <data name="INFO_POWER_METER_3" xml:space="preserve">
+    <value>Unsymmetrie der Spannung im Schranknetzteil festgestellt! Kontaktieren Sie Ihren Energieversorger</value>
+  </data>
+  <data name="INFO_POWER_METER_4" xml:space="preserve">
+    <value>Stromungleichgewicht im Schranknetzteil erkannt! Überprüfen Sie alle Schranklasten Phase für Phase</value>
+  </data>
+  <data name="INFO_POWER_METER_5" xml:space="preserve">
+    <value>Fehlerstatus des Schrankleistungsmessers – Überprüfen Sie ihn vor Ort und setzen Sie den Fehler zurück</value>
+  </data>
+  <data name="INFO_POWER_METER_6" xml:space="preserve">
+    <value>Schaltschrank-Leistungsmesser offline fehlerhaft – Überprüfen Sie die ProfiNet-Verbindung mit dem Gerät</value>
+  </data>
+  <data name="INFO_POWER_METER_7" xml:space="preserve">
+    <value>Frequenz der Schrankstromversorgung außerhalb der Toleranz! Kontaktieren Sie Ihren Energieversorger</value>
+  </data>
+  <data name="INFO_AMP_12" xml:space="preserve">
+    <value>Überprüfen Sie das Gerät, da beim Ausschalten des Geräts ein Stromfluss erkannt wurde</value>
+  </data>
+  <data name="INFO_SYS_35" xml:space="preserve">
+    <value>Überprüfen Sie das Profinet-Kabel, die Anschlüsse und die Stromversorgung des Kommunikationsmoduls</value>
+  </data>
 </root>
