--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -8914,4 +8914,385 @@
   <data name="DRYER - AIR LOCK" xml:space="preserve">
     <value>Secadora - Bloqueo de aire</value>
   </data>
+  <data name="MIXING" xml:space="preserve">
+    <value>Mezclando</value>
+  </data>
+  <data name="SELECTION" xml:space="preserve">
+    <value>Selección</value>
+  </data>
+  <data name="SAMPLE" xml:space="preserve">
+    <value>Muestra</value>
+  </data>
+  <data name="COMPONENTSTOPBUTTON" xml:space="preserve">
+    <value>Botón de parada de componente</value>
+  </data>
+  <data name="ADVANCEDTRENDS" xml:space="preserve">
+    <value>Tendencias avanzadas</value>
+  </data>
+  <data name="VOLTAGE" xml:space="preserve">
+    <value>Voltaje</value>
+  </data>
+  <data name="POWER" xml:space="preserve">
+    <value>Fuerza</value>
+  </data>
+  <data name="FREQUENCY" xml:space="preserve">
+    <value>Frecuencia</value>
+  </data>
+  <data name="NO SPEED REDUCTION" xml:space="preserve">
+    <value>Sin reducción de velocidad</value>
+  </data>
+  <data name="REDUCTION SPEED IN PROGRESS" xml:space="preserve">
+    <value>Velocidad de reducción en curso</value>
+  </data>
+  <data name="GATE CLOSED" xml:space="preserve">
+    <value>Puerta cerrada</value>
+  </data>
+  <data name="ACCESS GATE NOT CLOSED" xml:space="preserve">
+    <value>Puerta de acceso no cerrada</value>
+  </data>
+  <data name="CHARGING CONVEYOR SAFETY KEY" xml:space="preserve">
+    <value>Llave de seguridad del transportador de carga</value>
+  </data>
+  <data name="CHARGING CONVEYOR GATE OPEN PROCEDURE" xml:space="preserve">
+    <value>Procedimiento de apertura de la puerta del transportador de carga</value>
+  </data>
+  <data name="SAFETY PINS LOCKED" xml:space="preserve">
+    <value>Pasadores de seguridad bloqueados</value>
+  </data>
+  <data name="SAFETY PINS NOT LOCKED" xml:space="preserve">
+    <value>Pasadores de seguridad no bloqueados</value>
+  </data>
+  <data name="ON REQUEST" xml:space="preserve">
+    <value>Bajo pedido</value>
+  </data>
+  <data name="HYDRAULIC UNIT ON" xml:space="preserve">
+    <value>Unidad hidráulica encendida</value>
+  </data>
+  <data name="DEBALER HYDRAULICS" xml:space="preserve">
+    <value>Hidráulica desbaleradora</value>
+  </data>
+  <data name="HIGH FILLING" xml:space="preserve">
+    <value>Alto llenado</value>
+  </data>
+  <data name="CALCULATED FILLLING" xml:space="preserve">
+    <value>Llenado calculado</value>
+  </data>
+  <data name="(1=RELEASED 0=TRAPPED)" xml:space="preserve">
+    <value>(1=Liberado 0=Atrapado)</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT REFERENCE ON)" xml:space="preserve">
+    <value>Deshabilitado en producción (referencia constante activada)</value>
+  </data>
+  <data name="WATER TANK TREATED WATER" xml:space="preserve">
+    <value>Tanque de agua Agua tratada</value>
+  </data>
+  <data name="WATER TREAMENT SIGNALS" xml:space="preserve">
+    <value>Señales de tratamiento de agua</value>
+  </data>
+  <data name="ACCELERATION BELT" xml:space="preserve">
+    <value>Cinturón de aceleración</value>
+  </data>
+  <data name="RUN-OFF SWITCH" xml:space="preserve">
+    <value>Interruptor de salida</value>
+  </data>
+  <data name="BELT MISALIGNMENT" xml:space="preserve">
+    <value>Desalineación de la correa</value>
+  </data>
+  <data name="SORTER" xml:space="preserve">
+    <value>Clasificador</value>
+  </data>
+  <data name="GRINDER NOT DISABLED" xml:space="preserve">
+    <value>Molinillo no deshabilitado</value>
+  </data>
+  <data name="DECANTER SKIMMER" xml:space="preserve">
+    <value>Espumador decantador</value>
+  </data>
+  <data name="OK FOR PROCESS - MAX LEVEL" xml:space="preserve">
+    <value>Ok para proceso - Nivel máximo</value>
+  </data>
+  <data name="WAITING TO GO BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Esperando bajar del nivel máximo</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Tiempo de vaciado por debajo del nivel máximo</value>
+  </data>
+  <data name="WCE FRESH WATER CLEANING" xml:space="preserve">
+    <value>Limpieza con agua dulce Wce</value>
+  </data>
+  <data name="WCE STEAM CLEANING" xml:space="preserve">
+    <value>Limpieza a vapor Wce</value>
+  </data>
+  <data name="SEPARATION TANK TOP DISCHARGE PUMP" xml:space="preserve">
+    <value>Bomba de descarga superior del tanque de separación</value>
+  </data>
+  <data name="SEPARATION TANK TOP PUMP GATE" xml:space="preserve">
+    <value>Puerta de bomba superior del tanque de separación</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM DISCHARGE PUMP" xml:space="preserve">
+    <value>Bomba de descarga inferior del tanque de separación</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM PUMP GATE" xml:space="preserve">
+    <value>Puerta de bomba inferior del tanque de separación</value>
+  </data>
+  <data name="WATER TANK WATER PUMP TO 420" xml:space="preserve">
+    <value>Bomba de agua del tanque de agua a 420</value>
+  </data>
+  <data name="MATERIAL SELECTION" xml:space="preserve">
+    <value>Selección de materiales</value>
+  </data>
+  <data name="PLANT CONFIGURATION" xml:space="preserve">
+    <value>Configuración de la planta</value>
+  </data>
+  <data name="HDPE" xml:space="preserve">
+    <value>PEAD</value>
+  </data>
+  <data name="PET" xml:space="preserve">
+    <value>PET</value>
+  </data>
+  <data name="HDPE MATERIAL" xml:space="preserve">
+    <value>Material de polietileno de alta densidad</value>
+  </data>
+  <data name="PET MATERIAL" xml:space="preserve">
+    <value>Material de mascota</value>
+  </data>
+  <data name="SEARCHING HDPE POSITION" xml:space="preserve">
+    <value>Búsqueda de posición de HDPE</value>
+  </data>
+  <data name="SEARCHING PET POSITION" xml:space="preserve">
+    <value>Buscando posición PET</value>
+  </data>
+  <data name="VALVES NOT OK" xml:space="preserve">
+    <value>Las válvulas no están bien</value>
+  </data>
+  <data name="RINSING REACTOR 1 AGITATOR" xml:space="preserve">
+    <value>Enjuague Reactor 1 Agitador</value>
+  </data>
+  <data name="RINSING REACTOR 2 AGITATOR" xml:space="preserve">
+    <value>Enjuague Reactor 2 Agitador</value>
+  </data>
+  <data name="STATIC RELAY STATUS" xml:space="preserve">
+    <value>Estado del relé estático</value>
+  </data>
+  <data name="COMMAND HEATING" xml:space="preserve">
+    <value>Calefacción por mando</value>
+  </data>
+  <data name="RESISTOR CURRENT PHASE" xml:space="preserve">
+    <value>Fase de corriente de resistencia</value>
+  </data>
+  <data name="STATIC RELAY NOT OK" xml:space="preserve">
+    <value>El relé estático no está bien</value>
+  </data>
+  <data name="CURRENT LEAKAGE (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER RESISTOR OFF)" xml:space="preserve">
+    <value>Fuga de corriente (amperio &gt;5% del amperaje nominal 5 segundos después de apagar la resistencia)</value>
+  </data>
+  <data name="CURRENT PHASE" xml:space="preserve">
+    <value>Fase actual</value>
+  </data>
+  <data name="SILO LEVEL SENSOR OK" xml:space="preserve">
+    <value>Sensor de nivel de silo correcto</value>
+  </data>
+  <data name="SILO LEVEL SENSOR NOT OK FOR FILLING" xml:space="preserve">
+    <value>El sensor de nivel del silo no está bien para el llenado</value>
+  </data>
+  <data name="SILO NOT OVERFULL" xml:space="preserve">
+    <value>Silo no demasiado lleno</value>
+  </data>
+  <data name="SILO OVERFULL" xml:space="preserve">
+    <value>Silo demasiado lleno</value>
+  </data>
+  <data name="AGITATOR (IN FILLING/DISCHARGING)" xml:space="preserve">
+    <value>Agitador (En Llenado/Descarga)</value>
+  </data>
+  <data name="BLOWER" xml:space="preserve">
+    <value>Soplador</value>
+  </data>
+  <data name="SAMPLING" xml:space="preserve">
+    <value>Muestreo</value>
+  </data>
+  <data name="SAMPLE REQUEST" xml:space="preserve">
+    <value>Solicitud de muestra</value>
+  </data>
+  <data name="(1=REQ)" xml:space="preserve">
+    <value>(1=Solicitar)</value>
+  </data>
+  <data name="LOCAL REQUEST" xml:space="preserve">
+    <value>Solicitud local</value>
+  </data>
+  <data name="PRESS LOCAL PUSH BUTTON TO TAKE A SAMPLE" xml:space="preserve">
+    <value>Presione el botón local para tomar una muestra</value>
+  </data>
+  <data name="PROCESS" xml:space="preserve">
+    <value>Proceso</value>
+  </data>
+  <data name="BAGS DIVERTER" xml:space="preserve">
+    <value>Desviador de Bolsas</value>
+  </data>
+  <data name="BIG BAGS NOT OK FOR LOADING" xml:space="preserve">
+    <value>Las bolsas grandes no son adecuadas para cargar</value>
+  </data>
+  <data name="BAGS VIEW" xml:space="preserve">
+    <value>Ver bolsas</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON ON CABINET HMI" xml:space="preserve">
+    <value>Botón pulsador de emergencia en el gabinete HMI</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON (F-INPUT)" xml:space="preserve">
+    <value>SYS - Pulsador de emergencia (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE VOLTAGE PROTECTION (F-INPUT)" xml:space="preserve">
+    <value>SYS - Protección contra sobretensiones (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Dispositivo de protección contra sobretensiones</value>
+  </data>
+  <data name="SYS - CONTROL MODULE" xml:space="preserve">
+    <value>SYS - Módulo de control</value>
+  </data>
+  <data name="SYS - CONTROL MODULE RESET" xml:space="preserve">
+    <value>SYS - Restablecimiento del módulo de control</value>
+  </data>
+  <data name="SYS - AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Dispositivo de protección contra sobretensiones de CA</value>
+  </data>
+  <data name="SYS - DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Dispositivo de protección contra sobretensiones de CC</value>
+  </data>
+  <data name="SYS - MAIN POWER SWITCH (F-INPUT)" xml:space="preserve">
+    <value>SYS - Interruptor de alimentación principal (F-INPUT)</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON REDUNDANT F-INPUT" xml:space="preserve">
+    <value>SYS - Pulsador de emergencia F-INPUT redundante</value>
+  </data>
+  <data name="SYS - COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>SYS - Canal de contactor de parada de comando</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION IN CABINET HMI" xml:space="preserve">
+    <value>Protección contra sobretensiones en gabinete Hmi</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION (HMI)" xml:space="preserve">
+    <value>Protección contra sobretensiones (Hmi)</value>
+  </data>
+  <data name="24 VOLTS ANALOG INPUTS OK" xml:space="preserve">
+    <value>Entradas analógicas de 24 voltios Ok</value>
+  </data>
+  <data name="SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Dispositivo de protección contra sobretensiones</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE STATUS OK" xml:space="preserve">
+    <value>Estado del módulo de control de suministro correcto</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE FAULT RESET COMMAND" xml:space="preserve">
+    <value>Comando de restablecimiento de falla del módulo de control de suministro</value>
+  </data>
+  <data name="SURGE PROTECTION" xml:space="preserve">
+    <value>Protección contra sobretensiones</value>
+  </data>
+  <data name="OVERLOAD SUPPLY CONTROL MODULE" xml:space="preserve">
+    <value>Módulo de control de suministro de sobrecarga</value>
+  </data>
+  <data name="PROFINET COMMUNICATION BREAKDOWN" xml:space="preserve">
+    <value>Desglose de la comunicación Profinet</value>
+  </data>
+  <data name="AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Dispositivo de protección contra sobretensiones de CA</value>
+  </data>
+  <data name="DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Dispositivo de protección contra sobretensiones de CC</value>
+  </data>
+  <data name="POWER SWITCH ON" xml:space="preserve">
+    <value>Interruptor de encendido encendido</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON REDUNDANT" xml:space="preserve">
+    <value>Pulsador de emergencia redundante</value>
+  </data>
+  <data name="COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>Comando Parada Canal Contactor</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 0 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Pulsador Parada 0 - Fallo de Hardware (Pasivación de Entrada)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 1 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Pulsador de parada 1 - Fallo de hardware (Pasivación de entrada)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 2 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Pulsador de parada 2 - Fallo de hardware (Pasivación de entrada)</value>
+  </data>
+  <data name="CABINET MAIN POWER SURGE PROTECTION" xml:space="preserve">
+    <value>Protección contra sobretensiones de energía principal del gabinete</value>
+  </data>
+  <data name="CABINET POWER SUPPLY 24VDC SURGE PROTECTION" xml:space="preserve">
+    <value>Fuente de alimentación del gabinete Protección contra sobretensiones de 24 V CC</value>
+  </data>
+  <data name="POWER ANALYZER" xml:space="preserve">
+    <value>Analizador de potencia</value>
+  </data>
+  <data name="CABINET LINE HIGH VOLTAGE" xml:space="preserve">
+    <value>Línea de gabinete de alto voltaje</value>
+  </data>
+  <data name="CABINET LINE HIGH CURRENT" xml:space="preserve">
+    <value>Línea de gabinete de alta corriente</value>
+  </data>
+  <data name="CABINET LINE VOLTAGE UNBALANCED" xml:space="preserve">
+    <value>Voltaje de línea del gabinete desequilibrado</value>
+  </data>
+  <data name="CABINET LINE CURRENT UNBALANCED" xml:space="preserve">
+    <value>Corriente de línea de gabinete desequilibrada</value>
+  </data>
+  <data name="LINE FREQUENCY OUT OF TOLERANCE" xml:space="preserve">
+    <value>Frecuencia de línea fuera de tolerancia</value>
+  </data>
+  <data name="POWER METER GENERAL ALARM" xml:space="preserve">
+    <value>Alarma general del medidor de potencia</value>
+  </data>
+  <data name="LINE VOLTAGE" xml:space="preserve">
+    <value>Linea de voltaje</value>
+  </data>
+  <data name="AMPLITUDE UNBALANCED" xml:space="preserve">
+    <value>Amplitud desequilibrada</value>
+  </data>
+  <data name="LINE CURRENT" xml:space="preserve">
+    <value>Corriente de línea</value>
+  </data>
+  <data name="ACTIVE POWER" xml:space="preserve">
+    <value>Poder activo</value>
+  </data>
+  <data name="REACTIVE POWER" xml:space="preserve">
+    <value>Poder reactivo</value>
+  </data>
+  <data name="POWER FACTOR (COS-PHI)" xml:space="preserve">
+    <value>Factor de potencia (Cos-Phi)</value>
+  </data>
+  <data name="LINE FREQUENCY" xml:space="preserve">
+    <value>Frecuencia de línea</value>
+  </data>
+  <data name="SYSTEM" xml:space="preserve">
+    <value>Sistema</value>
+  </data>
+  <data name="INFO_POWER_METER_1" xml:space="preserve">
+    <value>¡Se ha detectado alto voltaje en la fuente de alimentación del gabinete! Póngase en contacto con su proveedor de energía</value>
+  </data>
+  <data name="INFO_POWER_METER_2" xml:space="preserve">
+    <value>¡Se ha detectado alta corriente en la fuente de alimentación del gabinete! Verificar la carga del gabinete</value>
+  </data>
+  <data name="INFO_POWER_METER_3" xml:space="preserve">
+    <value>¡Desequilibrio de voltaje en la fuente de alimentación del gabinete detectado! Póngase en contacto con su proveedor de energía</value>
+  </data>
+  <data name="INFO_POWER_METER_4" xml:space="preserve">
+    <value>¡Se ha detectado un desequilibrio de corriente en la fuente de alimentación del gabinete! Verifique todas las cargas del gabinete fase por fase</value>
+  </data>
+  <data name="INFO_POWER_METER_5" xml:space="preserve">
+    <value>Estado defectuoso del medidor de potencia del gabinete: verifíquelo localmente y restablezca el fallo</value>
+  </data>
+  <data name="INFO_POWER_METER_6" xml:space="preserve">
+    <value>Medidor de potencia del gabinete defectuoso fuera de línea: verifique la conexión ProfiNet con el dispositivo</value>
+  </data>
+  <data name="INFO_POWER_METER_7" xml:space="preserve">
+    <value>¡Frecuencia de la línea de suministro de energía del gabinete fuera de tolerancia! Póngase en contacto con su proveedor de energía</value>
+  </data>
+  <data name="INFO_AMP_12" xml:space="preserve">
+    <value>Verifique el dispositivo ya que se detectó circulación actual cuando se apagó el dispositivo</value>
+  </data>
+  <data name="INFO_SYS_35" xml:space="preserve">
+    <value>Verifique el cable Profinet, los conectores y la fuente de alimentación del módulo de comunicación</value>
+  </data>
 </root>
