--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -8913,4 +8913,385 @@
   <data name="DRYER - AIR LOCK" xml:space="preserve">
     <value>מייבש - Air Lock</value>
   </data>
+  <data name="MIXING" xml:space="preserve">
+    <value>עִרבּוּב</value>
+  </data>
+  <data name="SELECTION" xml:space="preserve">
+    <value>בְּחִירָה</value>
+  </data>
+  <data name="SAMPLE" xml:space="preserve">
+    <value>לִטעוֹם</value>
+  </data>
+  <data name="COMPONENTSTOPBUTTON" xml:space="preserve">
+    <value>לחצן עצירת רכיב</value>
+  </data>
+  <data name="ADVANCEDTRENDS" xml:space="preserve">
+    <value>AdvancedTrends</value>
+  </data>
+  <data name="VOLTAGE" xml:space="preserve">
+    <value>מתח</value>
+  </data>
+  <data name="POWER" xml:space="preserve">
+    <value>כּוֹחַ</value>
+  </data>
+  <data name="FREQUENCY" xml:space="preserve">
+    <value>תדירות</value>
+  </data>
+  <data name="NO SPEED REDUCTION" xml:space="preserve">
+    <value>אין הפחתת מהירות</value>
+  </data>
+  <data name="REDUCTION SPEED IN PROGRESS" xml:space="preserve">
+    <value>מהירות הפחתה בעיצומה</value>
+  </data>
+  <data name="GATE CLOSED" xml:space="preserve">
+    <value>שער סגור</value>
+  </data>
+  <data name="ACCESS GATE NOT CLOSED" xml:space="preserve">
+    <value>שער הגישה לא סגור</value>
+  </data>
+  <data name="CHARGING CONVEYOR SAFETY KEY" xml:space="preserve">
+    <value>מפתח בטיחות מסוע טעינה</value>
+  </data>
+  <data name="CHARGING CONVEYOR GATE OPEN PROCEDURE" xml:space="preserve">
+    <value>הליך פתיחת שער מסוע טעינה</value>
+  </data>
+  <data name="SAFETY PINS LOCKED" xml:space="preserve">
+    <value>סיכות בטיחות נעולים</value>
+  </data>
+  <data name="SAFETY PINS NOT LOCKED" xml:space="preserve">
+    <value>סיכות בטיחות לא ננעלות</value>
+  </data>
+  <data name="ON REQUEST" xml:space="preserve">
+    <value>בבקשה</value>
+  </data>
+  <data name="HYDRAULIC UNIT ON" xml:space="preserve">
+    <value>יחידה הידראולית פועלת</value>
+  </data>
+  <data name="DEBALER HYDRAULICS" xml:space="preserve">
+    <value>Debaler הידראוליקה</value>
+  </data>
+  <data name="HIGH FILLING" xml:space="preserve">
+    <value>מילוי גבוה</value>
+  </data>
+  <data name="CALCULATED FILLLING" xml:space="preserve">
+    <value>מילוי מחושב</value>
+  </data>
+  <data name="(1=RELEASED 0=TRAPPED)" xml:space="preserve">
+    <value>(1=פורסם 0=לכודים)</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT REFERENCE ON)" xml:space="preserve">
+    <value>מושבת בייצור (הפניה קבועה מופעל)</value>
+  </data>
+  <data name="WATER TANK TREATED WATER" xml:space="preserve">
+    <value>מיכל מים מטופלים</value>
+  </data>
+  <data name="WATER TREAMENT SIGNALS" xml:space="preserve">
+    <value>אותות לטיפול במים</value>
+  </data>
+  <data name="ACCELERATION BELT" xml:space="preserve">
+    <value>חגורת תאוצה</value>
+  </data>
+  <data name="RUN-OFF SWITCH" xml:space="preserve">
+    <value>מתג ריצה</value>
+  </data>
+  <data name="BELT MISALIGNMENT" xml:space="preserve">
+    <value>אי יישור חגורה</value>
+  </data>
+  <data name="SORTER" xml:space="preserve">
+    <value>מְמַיֵן</value>
+  </data>
+  <data name="GRINDER NOT DISABLED" xml:space="preserve">
+    <value>מטחנה לא מושבתת</value>
+  </data>
+  <data name="DECANTER SKIMMER" xml:space="preserve">
+    <value>רחפן דקנטר</value>
+  </data>
+  <data name="OK FOR PROCESS - MAX LEVEL" xml:space="preserve">
+    <value>אוקי לתהליך - רמה מקסימלית</value>
+  </data>
+  <data name="WAITING TO GO BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>מחכה לרדת מתחת לרמה המקסימלית</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>זמן ריקון מתחת לרמה המרבית</value>
+  </data>
+  <data name="WCE FRESH WATER CLEANING" xml:space="preserve">
+    <value>Wce ניקוי מים מתוקים</value>
+  </data>
+  <data name="WCE STEAM CLEANING" xml:space="preserve">
+    <value>Wce ניקוי בקיטור</value>
+  </data>
+  <data name="SEPARATION TANK TOP DISCHARGE PUMP" xml:space="preserve">
+    <value>משאבת פריקה גופייה הפרדה</value>
+  </data>
+  <data name="SEPARATION TANK TOP PUMP GATE" xml:space="preserve">
+    <value>שער משאבת גופיות הפרדה</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM DISCHARGE PUMP" xml:space="preserve">
+    <value>משאבת פריקה תחתית של מיכל הפרדה</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM PUMP GATE" xml:space="preserve">
+    <value>שער משאבת תחתית מיכל הפרדה</value>
+  </data>
+  <data name="WATER TANK WATER PUMP TO 420" xml:space="preserve">
+    <value>משאבת מים למיכל מים עד 420</value>
+  </data>
+  <data name="MATERIAL SELECTION" xml:space="preserve">
+    <value>בחירת חומרים</value>
+  </data>
+  <data name="PLANT CONFIGURATION" xml:space="preserve">
+    <value>תצורת מפעל</value>
+  </data>
+  <data name="HDPE" xml:space="preserve">
+    <value>HDPE</value>
+  </data>
+  <data name="PET" xml:space="preserve">
+    <value>PET</value>
+  </data>
+  <data name="HDPE MATERIAL" xml:space="preserve">
+    <value>חומר HDPE</value>
+  </data>
+  <data name="PET MATERIAL" xml:space="preserve">
+    <value>חומר PET</value>
+  </data>
+  <data name="SEARCHING HDPE POSITION" xml:space="preserve">
+    <value>חיפוש מיקום HDPE</value>
+  </data>
+  <data name="SEARCHING PET POSITION" xml:space="preserve">
+    <value>חיפוש עמדת PET</value>
+  </data>
+  <data name="VALVES NOT OK" xml:space="preserve">
+    <value>שסתומים לא בסדר</value>
+  </data>
+  <data name="RINSING REACTOR 1 AGITATOR" xml:space="preserve">
+    <value>כור שטיפה 1 מערבלת</value>
+  </data>
+  <data name="RINSING REACTOR 2 AGITATOR" xml:space="preserve">
+    <value>כור שטיפה 2 מתסיס</value>
+  </data>
+  <data name="STATIC RELAY STATUS" xml:space="preserve">
+    <value>מצב ממסר סטטי</value>
+  </data>
+  <data name="COMMAND HEATING" xml:space="preserve">
+    <value>פיקוד חימום</value>
+  </data>
+  <data name="RESISTOR CURRENT PHASE" xml:space="preserve">
+    <value>שלב נוכחי נגד</value>
+  </data>
+  <data name="STATIC RELAY NOT OK" xml:space="preserve">
+    <value>ממסר סטטי לא בסדר</value>
+  </data>
+  <data name="CURRENT LEAKAGE (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER RESISTOR OFF)" xml:space="preserve">
+    <value>זליגת זרם (מגבר &gt;5% מהמגבר הנומינלי 5 שניות לאחר כיבוי הנגד)</value>
+  </data>
+  <data name="CURRENT PHASE" xml:space="preserve">
+    <value>השלב הנוכחי</value>
+  </data>
+  <data name="SILO LEVEL SENSOR OK" xml:space="preserve">
+    <value>חיישן מפלס סילו בסדר</value>
+  </data>
+  <data name="SILO LEVEL SENSOR NOT OK FOR FILLING" xml:space="preserve">
+    <value>חיישן מפלס סילו לא בסדר למילוי</value>
+  </data>
+  <data name="SILO NOT OVERFULL" xml:space="preserve">
+    <value>סילו לא יתר על המידה</value>
+  </data>
+  <data name="SILO OVERFULL" xml:space="preserve">
+    <value>סילו Overfull</value>
+  </data>
+  <data name="AGITATOR (IN FILLING/DISCHARGING)" xml:space="preserve">
+    <value>מעורר (במילוי/פריקה)</value>
+  </data>
+  <data name="BLOWER" xml:space="preserve">
+    <value>מַפּוּחַ</value>
+  </data>
+  <data name="SAMPLING" xml:space="preserve">
+    <value>דְגִימָה</value>
+  </data>
+  <data name="SAMPLE REQUEST" xml:space="preserve">
+    <value>בקשה לדוגמה</value>
+  </data>
+  <data name="(1=REQ)" xml:space="preserve">
+    <value>(1=REQ)</value>
+  </data>
+  <data name="LOCAL REQUEST" xml:space="preserve">
+    <value>בקשה מקומית</value>
+  </data>
+  <data name="PRESS LOCAL PUSH BUTTON TO TAKE A SAMPLE" xml:space="preserve">
+    <value>לחץ על כפתור לחיצה מקומי כדי לקחת דוגמה</value>
+  </data>
+  <data name="PROCESS" xml:space="preserve">
+    <value>תהליך</value>
+  </data>
+  <data name="BAGS DIVERTER" xml:space="preserve">
+    <value>מפנה תיקים</value>
+  </data>
+  <data name="BIG BAGS NOT OK FOR LOADING" xml:space="preserve">
+    <value>תיקים גדולים לא בסדר לטעינה</value>
+  </data>
+  <data name="BAGS VIEW" xml:space="preserve">
+    <value>נוף תיקים</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON ON CABINET HMI" xml:space="preserve">
+    <value>לחצן חירום ב-HMI של הארון</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON (F-INPUT)" xml:space="preserve">
+    <value>SYS - לחצן חירום (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE VOLTAGE PROTECTION (F-INPUT)" xml:space="preserve">
+    <value>SYS - הגנת מתח מתח (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - התקן להגנה מפני נחשולי מתח</value>
+  </data>
+  <data name="SYS - CONTROL MODULE" xml:space="preserve">
+    <value>SYS - מודול בקרה</value>
+  </data>
+  <data name="SYS - CONTROL MODULE RESET" xml:space="preserve">
+    <value>SYS - איפוס מודול בקרה</value>
+  </data>
+  <data name="SYS - AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - AC Surge Protection Device</value>
+  </data>
+  <data name="SYS - DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - DC Surge Protection Device</value>
+  </data>
+  <data name="SYS - MAIN POWER SWITCH (F-INPUT)" xml:space="preserve">
+    <value>SYS - מתג הפעלה ראשי (F-INPUT)</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON REDUNDANT F-INPUT" xml:space="preserve">
+    <value>SYS - כפתור חירום מיותר F-INPUT</value>
+  </data>
+  <data name="SYS - COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>SYS - Command Estop Contactor Channel</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION IN CABINET HMI" xml:space="preserve">
+    <value>הגנת מתח נחשול בארון Hmi</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION (HMI)" xml:space="preserve">
+    <value>הגנת מתח מתח (Hmi)</value>
+  </data>
+  <data name="24 VOLTS ANALOG INPUTS OK" xml:space="preserve">
+    <value>24 וולט כניסות אנלוגיות בסדר</value>
+  </data>
+  <data name="SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>מכשיר הגנה מפני נחשולי מתח</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE STATUS OK" xml:space="preserve">
+    <value>מצב מודול בקרת אספקה ​​בסדר</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE FAULT RESET COMMAND" xml:space="preserve">
+    <value>פקודת איפוס תקלות של מודול בקרת אספקה</value>
+  </data>
+  <data name="SURGE PROTECTION" xml:space="preserve">
+    <value>הגנה מפני נחשולי מתח</value>
+  </data>
+  <data name="OVERLOAD SUPPLY CONTROL MODULE" xml:space="preserve">
+    <value>מודול בקרת אספקת עומס יתר</value>
+  </data>
+  <data name="PROFINET COMMUNICATION BREAKDOWN" xml:space="preserve">
+    <value>התמוטטות תקשורת Profinet</value>
+  </data>
+  <data name="AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>התקן הגנה מפני מתח AC</value>
+  </data>
+  <data name="DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>התקן הגנה מפני מתח DC</value>
+  </data>
+  <data name="POWER SWITCH ON" xml:space="preserve">
+    <value>מתג הפעלה מופעל</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON REDUNDANT" xml:space="preserve">
+    <value>כפתור חירום מיותר</value>
+  </data>
+  <data name="COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>Command Estop Contactor Channel</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 0 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Estop Push-Button 0 - תקלת חומרה (פסיבית קלט)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 1 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Estop Push-Button 1 - תקלת חומרה (פסיבית קלט)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 2 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Estop Push-Button 2 - תקלת חומרה (פסיבית קלט)</value>
+  </data>
+  <data name="CABINET MAIN POWER SURGE PROTECTION" xml:space="preserve">
+    <value>ארון הגנה מפני נחשולי מתח ראשי</value>
+  </data>
+  <data name="CABINET POWER SUPPLY 24VDC SURGE PROTECTION" xml:space="preserve">
+    <value>ארון ספק כוח 24Vdc הגנת מתח</value>
+  </data>
+  <data name="POWER ANALYZER" xml:space="preserve">
+    <value>מנתח כוח</value>
+  </data>
+  <data name="CABINET LINE HIGH VOLTAGE" xml:space="preserve">
+    <value>ארון קו מתח גבוה</value>
+  </data>
+  <data name="CABINET LINE HIGH CURRENT" xml:space="preserve">
+    <value>ארון קו גבוה זרם</value>
+  </data>
+  <data name="CABINET LINE VOLTAGE UNBALANCED" xml:space="preserve">
+    <value>מתח קו הארון לא מאוזן</value>
+  </data>
+  <data name="CABINET LINE CURRENT UNBALANCED" xml:space="preserve">
+    <value>זרם קו ארון לא מאוזן</value>
+  </data>
+  <data name="LINE FREQUENCY OUT OF TOLERANCE" xml:space="preserve">
+    <value>תדר קו מחוץ לסובלנות</value>
+  </data>
+  <data name="POWER METER GENERAL ALARM" xml:space="preserve">
+    <value>אזעקה כללית של מד כוח</value>
+  </data>
+  <data name="LINE VOLTAGE" xml:space="preserve">
+    <value>מתח קו</value>
+  </data>
+  <data name="AMPLITUDE UNBALANCED" xml:space="preserve">
+    <value>משרעת לא מאוזנת</value>
+  </data>
+  <data name="LINE CURRENT" xml:space="preserve">
+    <value>קו זרם</value>
+  </data>
+  <data name="ACTIVE POWER" xml:space="preserve">
+    <value>כוח פעיל</value>
+  </data>
+  <data name="REACTIVE POWER" xml:space="preserve">
+    <value>כוח תגובתי</value>
+  </data>
+  <data name="POWER FACTOR (COS-PHI)" xml:space="preserve">
+    <value>Power Factor (Cos-Phi)</value>
+  </data>
+  <data name="LINE FREQUENCY" xml:space="preserve">
+    <value>תדר קו</value>
+  </data>
+  <data name="SYSTEM" xml:space="preserve">
+    <value>מערכת</value>
+  </data>
+  <data name="INFO_POWER_METER_1" xml:space="preserve">
+    <value>ספק כוח ארון זוהה מתח גבוה! צור קשר עם ספק האנרגיה שלך</value>
+  </data>
+  <data name="INFO_POWER_METER_2" xml:space="preserve">
+    <value>זוהה זרם גבוה של ארון! בדוק את עומס הארון</value>
+  </data>
+  <data name="INFO_POWER_METER_3" xml:space="preserve">
+    <value>זוהה חוסר איזון של אספקת חשמל בארון! צור קשר עם ספק האנרגיה שלך</value>
+  </data>
+  <data name="INFO_POWER_METER_4" xml:space="preserve">
+    <value>זוהה חוסר איזון של אספקת החשמל של ארון! בדוק את כל עומסי הארונות שלב אחר שלב</value>
+  </data>
+  <data name="INFO_POWER_METER_5" xml:space="preserve">
+    <value>מצב מד חשמל לא תקין - בדוק אותו באופן מקומי ואפס את התקלה</value>
+  </data>
+  <data name="INFO_POWER_METER_6" xml:space="preserve">
+    <value>מד כוח ארון פגום במצב לא מקוון - בדוק את חיבור ProfiNet עם המכשיר</value>
+  </data>
+  <data name="INFO_POWER_METER_7" xml:space="preserve">
+    <value>תדירות קו אספקת החשמל של ארון מחוץ לסובלנות! צור קשר עם ספק האנרגיה שלך</value>
+  </data>
+  <data name="INFO_AMP_12" xml:space="preserve">
+    <value>בדוק את ההתקן מאז זוהה המחזור הנוכחי כשהמכשיר היה כבוי</value>
+  </data>
+  <data name="INFO_SYS_35" xml:space="preserve">
+    <value>בדוק את אספקת הכוח של כבל, מחברים ומודול תקשורת של Profinet</value>
+  </data>
 </root>
