--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -997,7 +997,7 @@
     <value>Regolazione in Campo</value>
   </data>
   <data name="SWIPE CARD TO LOG IN" xml:space="preserve">
-    <value>Scorri La Scheda Per Accedere</value>
+    <value>Passa la Scheda per Accedere</value>
   </data>
   <data name="SEARCH COMPONENTS" xml:space="preserve">
     <value>Ricerca Componenti</value>
@@ -2584,7 +2584,7 @@
     <value>Abilitare</value>
   </data>
   <data name="SWIPE ACCESS CARD TO UNLOCK" xml:space="preserve">
-    <value>Scorri La Carta Di Accesso Per Sbloccare</value>
+    <value>Passa La Carta Di Accesso Per Sbloccare</value>
   </data>
   <data name="SHREDDING" xml:space="preserve">
     <value>Triturazione</value>
@@ -4012,7 +4012,7 @@
     <value>Sottoprodotto</value>
   </data>
   <data name="CHEMICALS" xml:space="preserve">
-    <value>Sostanze chimiche</value>
+    <value>Chimica</value>
   </data>
   <data name="OIL" xml:space="preserve">
     <value>Olio</value>
@@ -6205,7 +6205,7 @@
     <value>Caricamento</value>
   </data>
   <data name="HOT WASH" xml:space="preserve">
-    <value>Lavaggio caldo</value>
+    <value>Lav. caldo</value>
   </data>
   <data name="RINSING" xml:space="preserve">
     <value>Risciacquo</value>
@@ -8912,5 +8912,386 @@
   </data>
   <data name="DRYER - AIR LOCK" xml:space="preserve">
     <value>Asciugatrice - Blocco dell'aria</value>
+  </data>
+  <data name="MIXING" xml:space="preserve">
+    <value>Miscelazione</value>
+  </data>
+  <data name="SELECTION" xml:space="preserve">
+    <value>Selezione</value>
+  </data>
+  <data name="SAMPLE" xml:space="preserve">
+    <value>Campione</value>
+  </data>
+  <data name="COMPONENTSTOPBUTTON" xml:space="preserve">
+    <value>Pulsante di arresto del componente</value>
+  </data>
+  <data name="ADVANCEDTRENDS" xml:space="preserve">
+    <value>Grafici avanzati</value>
+  </data>
+  <data name="VOLTAGE" xml:space="preserve">
+    <value>Tensione</value>
+  </data>
+  <data name="POWER" xml:space="preserve">
+    <value>Energia</value>
+  </data>
+  <data name="FREQUENCY" xml:space="preserve">
+    <value>Frequenza</value>
+  </data>
+  <data name="NO SPEED REDUCTION" xml:space="preserve">
+    <value>Nessuna riduzione della velocità</value>
+  </data>
+  <data name="REDUCTION SPEED IN PROGRESS" xml:space="preserve">
+    <value>Riduzione della velocità in corso</value>
+  </data>
+  <data name="GATE CLOSED" xml:space="preserve">
+    <value>Cancello chiuso</value>
+  </data>
+  <data name="ACCESS GATE NOT CLOSED" xml:space="preserve">
+    <value>Cancello di accesso non chiuso</value>
+  </data>
+  <data name="CHARGING CONVEYOR SAFETY KEY" xml:space="preserve">
+    <value>Chiave di sicurezza del nastro di carico</value>
+  </data>
+  <data name="CHARGING CONVEYOR GATE OPEN PROCEDURE" xml:space="preserve">
+    <value>Procedura di apertura del cancello del nastro di carico</value>
+  </data>
+  <data name="SAFETY PINS LOCKED" xml:space="preserve">
+    <value>Perni di sicurezza bloccati</value>
+  </data>
+  <data name="SAFETY PINS NOT LOCKED" xml:space="preserve">
+    <value>Perni di sicurezza non bloccati</value>
+  </data>
+  <data name="ON REQUEST" xml:space="preserve">
+    <value>Su richiesta</value>
+  </data>
+  <data name="HYDRAULIC UNIT ON" xml:space="preserve">
+    <value>Unità idraulica accesa</value>
+  </data>
+  <data name="DEBALER HYDRAULICS" xml:space="preserve">
+    <value>Sfaldaballe Idraulico</value>
+  </data>
+  <data name="HIGH FILLING" xml:space="preserve">
+    <value>Riempimento alto</value>
+  </data>
+  <data name="CALCULATED FILLLING" xml:space="preserve">
+    <value>Riempimento calcolato</value>
+  </data>
+  <data name="(1=RELEASED 0=TRAPPED)" xml:space="preserve">
+    <value>(1=Rilasciato 0=Bloccato)</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT REFERENCE ON)" xml:space="preserve">
+    <value>Disabilitato in produzione (riferimento costante attivo)</value>
+  </data>
+  <data name="WATER TANK TREATED WATER" xml:space="preserve">
+    <value>Acqua trattata dal serbatoio dell'acqua</value>
+  </data>
+  <data name="WATER TREAMENT SIGNALS" xml:space="preserve">
+    <value>Segnali di trattamento dell'acqua</value>
+  </data>
+  <data name="ACCELERATION BELT" xml:space="preserve">
+    <value>Natro di accelerazione</value>
+  </data>
+  <data name="RUN-OFF SWITCH" xml:space="preserve">
+    <value>Interruttore di scarico</value>
+  </data>
+  <data name="BELT MISALIGNMENT" xml:space="preserve">
+    <value>Disallineamento della cinghia</value>
+  </data>
+  <data name="SORTER" xml:space="preserve">
+    <value>Selezionatore</value>
+  </data>
+  <data name="GRINDER NOT DISABLED" xml:space="preserve">
+    <value>Smerigliatrice non disabilitata</value>
+  </data>
+  <data name="DECANTER SKIMMER" xml:space="preserve">
+    <value>Schiumatoio per decanter</value>
+  </data>
+  <data name="OK FOR PROCESS - MAX LEVEL" xml:space="preserve">
+    <value>Ok per il processo: livello massimo</value>
+  </data>
+  <data name="WAITING TO GO BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>In attesa di scendere sotto il livello massimo</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Tempo di svuotamento al di sotto del livello massimo</value>
+  </data>
+  <data name="WCE FRESH WATER CLEANING" xml:space="preserve">
+    <value>WCE Pulizia ad acqua</value>
+  </data>
+  <data name="WCE STEAM CLEANING" xml:space="preserve">
+    <value>WCE Pulizia a vapore</value>
+  </data>
+  <data name="SEPARATION TANK TOP DISCHARGE PUMP" xml:space="preserve">
+    <value>Pompa di scarico superiore del serbatoio di separazione</value>
+  </data>
+  <data name="SEPARATION TANK TOP PUMP GATE" xml:space="preserve">
+    <value>Cancello della pompa superiore del serbatoio di separazione</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM DISCHARGE PUMP" xml:space="preserve">
+    <value>Pompa di scarico inferiore del serbatoio di separazione</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM PUMP GATE" xml:space="preserve">
+    <value>Cancello della pompa di fondo del serbatoio di separazione</value>
+  </data>
+  <data name="WATER TANK WATER PUMP TO 420" xml:space="preserve">
+    <value>Pompa dell'acqua del serbatoio dell'acqua fino a 420</value>
+  </data>
+  <data name="MATERIAL SELECTION" xml:space="preserve">
+    <value>Selezione dei materiali</value>
+  </data>
+  <data name="PLANT CONFIGURATION" xml:space="preserve">
+    <value>Configurazione dell'impianto</value>
+  </data>
+  <data name="HDPE" xml:space="preserve">
+    <value>HDPE</value>
+  </data>
+  <data name="PET" xml:space="preserve">
+    <value>PET</value>
+  </data>
+  <data name="HDPE MATERIAL" xml:space="preserve">
+    <value>Materiale HDPE</value>
+  </data>
+  <data name="PET MATERIAL" xml:space="preserve">
+    <value>Materiale PET</value>
+  </data>
+  <data name="SEARCHING HDPE POSITION" xml:space="preserve">
+    <value>Ricerca della posizione dell'HDPE</value>
+  </data>
+  <data name="SEARCHING PET POSITION" xml:space="preserve">
+    <value>Ricerca della posizione PET</value>
+  </data>
+  <data name="VALVES NOT OK" xml:space="preserve">
+    <value>Valvole non OK</value>
+  </data>
+  <data name="RINSING REACTOR 1 AGITATOR" xml:space="preserve">
+    <value>Risciacquo dell'agitatore del reattore 1</value>
+  </data>
+  <data name="RINSING REACTOR 2 AGITATOR" xml:space="preserve">
+    <value>Risciacquo dell'agitatore del reattore 2</value>
+  </data>
+  <data name="STATIC RELAY STATUS" xml:space="preserve">
+    <value>Stato del relè statico</value>
+  </data>
+  <data name="COMMAND HEATING" xml:space="preserve">
+    <value>Comando Riscaldamento</value>
+  </data>
+  <data name="RESISTOR CURRENT PHASE" xml:space="preserve">
+    <value>Fase corrente del resistore</value>
+  </data>
+  <data name="STATIC RELAY NOT OK" xml:space="preserve">
+    <value>Relè statico non ok</value>
+  </data>
+  <data name="CURRENT LEAKAGE (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER RESISTOR OFF)" xml:space="preserve">
+    <value>Dispersione di corrente (Amp &gt;5% dell'Amp nominale 5 secondi dopo lo spegnimento del resistore)</value>
+  </data>
+  <data name="CURRENT PHASE" xml:space="preserve">
+    <value>Fase attuale</value>
+  </data>
+  <data name="SILO LEVEL SENSOR OK" xml:space="preserve">
+    <value>Sensore livello silo Ok</value>
+  </data>
+  <data name="SILO LEVEL SENSOR NOT OK FOR FILLING" xml:space="preserve">
+    <value>Sensore di livello del silo non idoneo al riempimento</value>
+  </data>
+  <data name="SILO NOT OVERFULL" xml:space="preserve">
+    <value>Silo non troppo pieno</value>
+  </data>
+  <data name="SILO OVERFULL" xml:space="preserve">
+    <value>Silo troppo pieno</value>
+  </data>
+  <data name="AGITATOR (IN FILLING/DISCHARGING)" xml:space="preserve">
+    <value>Agitatore (In riempimento/scarico)</value>
+  </data>
+  <data name="BLOWER" xml:space="preserve">
+    <value>Ventilatore</value>
+  </data>
+  <data name="SAMPLING" xml:space="preserve">
+    <value>Campionamento</value>
+  </data>
+  <data name="SAMPLE REQUEST" xml:space="preserve">
+    <value>Esempio di richiesta</value>
+  </data>
+  <data name="(1=REQ)" xml:space="preserve">
+    <value>(1=RICHIESTA)</value>
+  </data>
+  <data name="LOCAL REQUEST" xml:space="preserve">
+    <value>Richiesta locale</value>
+  </data>
+  <data name="PRESS LOCAL PUSH BUTTON TO TAKE A SAMPLE" xml:space="preserve">
+    <value>Premere il pulsante locale per prelevare un campione</value>
+  </data>
+  <data name="PROCESS" xml:space="preserve">
+    <value>Processo</value>
+  </data>
+  <data name="BAGS DIVERTER" xml:space="preserve">
+    <value>Deviatore dei sacchi</value>
+  </data>
+  <data name="BIG BAGS NOT OK FOR LOADING" xml:space="preserve">
+    <value>Sacchi non idonei al caricamento</value>
+  </data>
+  <data name="BAGS VIEW" xml:space="preserve">
+    <value>Visualizzazione Sacchi</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON ON CABINET HMI" xml:space="preserve">
+    <value>Pulsante di emergenza sull'HMI dell'armadio</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON (F-INPUT)" xml:space="preserve">
+    <value>SYS - Pulsante di emergenza (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE VOLTAGE PROTECTION (F-INPUT)" xml:space="preserve">
+    <value>SYS - Protezione da sovratensione (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Dispositivo di protezione contro le sovratensioni</value>
+  </data>
+  <data name="SYS - CONTROL MODULE" xml:space="preserve">
+    <value>SYS - Modulo di controllo</value>
+  </data>
+  <data name="SYS - CONTROL MODULE RESET" xml:space="preserve">
+    <value>SYS - Ripristino modulo di controllo</value>
+  </data>
+  <data name="SYS - AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Dispositivo di protezione da sovratensione CA</value>
+  </data>
+  <data name="SYS - DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Dispositivo di protezione da sovratensione CC</value>
+  </data>
+  <data name="SYS - MAIN POWER SWITCH (F-INPUT)" xml:space="preserve">
+    <value>SYS - Interruttore di alimentazione principale (F-INPUT)</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON REDUNDANT F-INPUT" xml:space="preserve">
+    <value>SYS - Pulsante di emergenza ridondante F-INPUT</value>
+  </data>
+  <data name="SYS - COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>SYS - Canale contattore comando Estop</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION IN CABINET HMI" xml:space="preserve">
+    <value>Protezione contro le sovratensioni nell'armadio HMI</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION (HMI)" xml:space="preserve">
+    <value>Protezione da sovratensione (Hmi)</value>
+  </data>
+  <data name="24 VOLTS ANALOG INPUTS OK" xml:space="preserve">
+    <value>Ingressi analogici a 24 Volt Ok</value>
+  </data>
+  <data name="SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Dispositivo di protezione contro le sovratensioni</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE STATUS OK" xml:space="preserve">
+    <value>Stato del modulo di controllo dell'alimentazione Ok</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE FAULT RESET COMMAND" xml:space="preserve">
+    <value>Comando di ripristino errore modulo di controllo alimentazione</value>
+  </data>
+  <data name="SURGE PROTECTION" xml:space="preserve">
+    <value>Protezione contro le sovratensioni</value>
+  </data>
+  <data name="OVERLOAD SUPPLY CONTROL MODULE" xml:space="preserve">
+    <value>Modulo di controllo alimentazione sovraccarico</value>
+  </data>
+  <data name="PROFINET COMMUNICATION BREAKDOWN" xml:space="preserve">
+    <value>Interruzione della comunicazione Profinet</value>
+  </data>
+  <data name="AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Dispositivo di protezione contro le sovratensioni CA</value>
+  </data>
+  <data name="DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Dispositivo di protezione contro le sovratensioni CC</value>
+  </data>
+  <data name="POWER SWITCH ON" xml:space="preserve">
+    <value>Interruttore di alimentazione su ON</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON REDUNDANT" xml:space="preserve">
+    <value>Pulsante di emergenza ridondante</value>
+  </data>
+  <data name="COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>Canale del contattore di comando Estop</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 0 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Pulsante Estop 0 - Guasto hardware (passivazione ingresso)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 1 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Pulsante Estop 1 - Guasto hardware (passivazione ingresso)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 2 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Pulsante Estop 2 - Guasto hardware (passivazione ingresso)</value>
+  </data>
+  <data name="CABINET MAIN POWER SURGE PROTECTION" xml:space="preserve">
+    <value>Protezione contro le sovratensioni dell'alimentazione principale dell'armadio</value>
+  </data>
+  <data name="CABINET POWER SUPPLY 24VDC SURGE PROTECTION" xml:space="preserve">
+    <value>Protezione contro le sovratensioni dell'alimentatore dell'armadio 24 V CC</value>
+  </data>
+  <data name="POWER ANALYZER" xml:space="preserve">
+    <value>Analizzatore di potenza</value>
+  </data>
+  <data name="CABINET LINE HIGH VOLTAGE" xml:space="preserve">
+    <value>Alta tensione della linea dell'armadio</value>
+  </data>
+  <data name="CABINET LINE HIGH CURRENT" xml:space="preserve">
+    <value>Linea armadio ad alta corrente</value>
+  </data>
+  <data name="CABINET LINE VOLTAGE UNBALANCED" xml:space="preserve">
+    <value>Tensione di linea dell'armadio sbilanciata</value>
+  </data>
+  <data name="CABINET LINE CURRENT UNBALANCED" xml:space="preserve">
+    <value>Corrente della linea armadio sbilanciata</value>
+  </data>
+  <data name="LINE FREQUENCY OUT OF TOLERANCE" xml:space="preserve">
+    <value>Frequenza di linea fuori tolleranza</value>
+  </data>
+  <data name="POWER METER GENERAL ALARM" xml:space="preserve">
+    <value>Allarme generale del misuratore di potenza</value>
+  </data>
+  <data name="LINE VOLTAGE" xml:space="preserve">
+    <value>Tensione di linea</value>
+  </data>
+  <data name="AMPLITUDE UNBALANCED" xml:space="preserve">
+    <value>Ampiezza sbilanciata</value>
+  </data>
+  <data name="LINE CURRENT" xml:space="preserve">
+    <value>Corrente di linea</value>
+  </data>
+  <data name="ACTIVE POWER" xml:space="preserve">
+    <value>Potenza attiva</value>
+  </data>
+  <data name="REACTIVE POWER" xml:space="preserve">
+    <value>Potere reattivo</value>
+  </data>
+  <data name="POWER FACTOR (COS-PHI)" xml:space="preserve">
+    <value>Fattore di potenza (Cos-Phi)</value>
+  </data>
+  <data name="LINE FREQUENCY" xml:space="preserve">
+    <value>Frequenza di linea</value>
+  </data>
+  <data name="SYSTEM" xml:space="preserve">
+    <value>Sistema</value>
+  </data>
+  <data name="INFO_POWER_METER_1" xml:space="preserve">
+    <value>Rilevata alta tensione dell'alimentatore dell'armadio! Contatta il tuo fornitore di energia</value>
+  </data>
+  <data name="INFO_POWER_METER_2" xml:space="preserve">
+    <value>Rilevata corrente elevata nell'alimentatore dell'armadio! Controllare il carico dell'armadio</value>
+  </data>
+  <data name="INFO_POWER_METER_3" xml:space="preserve">
+    <value>Rilevato squilibrio di tensione nell'alimentatore dell'armadio! Contatta il tuo fornitore di energia</value>
+  </data>
+  <data name="INFO_POWER_METER_4" xml:space="preserve">
+    <value>Rilevato squilibrio di corrente nell'alimentatore dell'armadio! Controlla tutti i carichi dell'armadio fase per fase</value>
+  </data>
+  <data name="INFO_POWER_METER_5" xml:space="preserve">
+    <value>Stato difettoso del misuratore di potenza dell'armadio: controllarlo localmente e ripristinare l'errore</value>
+  </data>
+  <data name="INFO_POWER_METER_6" xml:space="preserve">
+    <value>Misuratore di potenza dell'armadio difettoso offline: controllare la connessione ProfiNet con il dispositivo</value>
+  </data>
+  <data name="INFO_POWER_METER_7" xml:space="preserve">
+    <value>Frequenza della linea di alimentazione dell'armadio fuori tolleranza! Contatta il tuo fornitore di energia</value>
+  </data>
+  <data name="INFO_AMP_12" xml:space="preserve">
+    <value>Controllare il dispositivo poiché la circolazione corrente è stata rilevata quando il dispositivo era spento</value>
+  </data>
+  <data name="INFO_SYS_35" xml:space="preserve">
+    <value>Controllare cavo, connettori e alimentazione del modulo di comunicazione Profinet</value>
   </data>
 </root>
