--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -8913,4 +8913,385 @@
   <data name="DRYER - AIR LOCK" xml:space="preserve">
     <value>Secador - Bloqueio de Ar</value>
   </data>
+  <data name="MIXING" xml:space="preserve">
+    <value>Misturando</value>
+  </data>
+  <data name="SELECTION" xml:space="preserve">
+    <value>Seleção</value>
+  </data>
+  <data name="SAMPLE" xml:space="preserve">
+    <value>Amostra</value>
+  </data>
+  <data name="COMPONENTSTOPBUTTON" xml:space="preserve">
+    <value>Botão de parada de componente</value>
+  </data>
+  <data name="ADVANCEDTRENDS" xml:space="preserve">
+    <value>Tendências Avançadas</value>
+  </data>
+  <data name="VOLTAGE" xml:space="preserve">
+    <value>Tensão</value>
+  </data>
+  <data name="POWER" xml:space="preserve">
+    <value>Poder</value>
+  </data>
+  <data name="FREQUENCY" xml:space="preserve">
+    <value>Frequência</value>
+  </data>
+  <data name="NO SPEED REDUCTION" xml:space="preserve">
+    <value>Sem redução de velocidade</value>
+  </data>
+  <data name="REDUCTION SPEED IN PROGRESS" xml:space="preserve">
+    <value>Velocidade de redução em andamento</value>
+  </data>
+  <data name="GATE CLOSED" xml:space="preserve">
+    <value>Portão fechado</value>
+  </data>
+  <data name="ACCESS GATE NOT CLOSED" xml:space="preserve">
+    <value>Portão de acesso não fechado</value>
+  </data>
+  <data name="CHARGING CONVEYOR SAFETY KEY" xml:space="preserve">
+    <value>Chave de segurança do transportador de carregamento</value>
+  </data>
+  <data name="CHARGING CONVEYOR GATE OPEN PROCEDURE" xml:space="preserve">
+    <value>Procedimento de abertura da porta do transportador de carregamento</value>
+  </data>
+  <data name="SAFETY PINS LOCKED" xml:space="preserve">
+    <value>Alfinetes de segurança bloqueados</value>
+  </data>
+  <data name="SAFETY PINS NOT LOCKED" xml:space="preserve">
+    <value>Alfinetes de segurança não bloqueados</value>
+  </data>
+  <data name="ON REQUEST" xml:space="preserve">
+    <value>A pedido</value>
+  </data>
+  <data name="HYDRAULIC UNIT ON" xml:space="preserve">
+    <value>Unidade hidráulica ligada</value>
+  </data>
+  <data name="DEBALER HYDRAULICS" xml:space="preserve">
+    <value>Hidráulica da desbaladeira</value>
+  </data>
+  <data name="HIGH FILLING" xml:space="preserve">
+    <value>Alto enchimento</value>
+  </data>
+  <data name="CALCULATED FILLLING" xml:space="preserve">
+    <value>Preenchimento Calculado</value>
+  </data>
+  <data name="(1=RELEASED 0=TRAPPED)" xml:space="preserve">
+    <value>(1 = Liberado 0 = Preso)</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT REFERENCE ON)" xml:space="preserve">
+    <value>Desativado em produção (referência constante ativada)</value>
+  </data>
+  <data name="WATER TANK TREATED WATER" xml:space="preserve">
+    <value>Água tratada do tanque de água</value>
+  </data>
+  <data name="WATER TREAMENT SIGNALS" xml:space="preserve">
+    <value>Sinais de tratamento de água</value>
+  </data>
+  <data name="ACCELERATION BELT" xml:space="preserve">
+    <value>Cinto de aceleração</value>
+  </data>
+  <data name="RUN-OFF SWITCH" xml:space="preserve">
+    <value>Interruptor de fuga</value>
+  </data>
+  <data name="BELT MISALIGNMENT" xml:space="preserve">
+    <value>Desalinhamento da correia</value>
+  </data>
+  <data name="SORTER" xml:space="preserve">
+    <value>Classificador</value>
+  </data>
+  <data name="GRINDER NOT DISABLED" xml:space="preserve">
+    <value>Moedor não desativado</value>
+  </data>
+  <data name="DECANTER SKIMMER" xml:space="preserve">
+    <value>Skimmer decantador</value>
+  </data>
+  <data name="OK FOR PROCESS - MAX LEVEL" xml:space="preserve">
+    <value>Ok para processo - nível máximo</value>
+  </data>
+  <data name="WAITING TO GO BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Esperando para descer abaixo do nível máximo</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Tempo de esvaziamento abaixo do nível máximo</value>
+  </data>
+  <data name="WCE FRESH WATER CLEANING" xml:space="preserve">
+    <value>Limpeza de água doce Wce</value>
+  </data>
+  <data name="WCE STEAM CLEANING" xml:space="preserve">
+    <value>Limpeza a Vapor Wce</value>
+  </data>
+  <data name="SEPARATION TANK TOP DISCHARGE PUMP" xml:space="preserve">
+    <value>Bomba de descarga superior do tanque de separação</value>
+  </data>
+  <data name="SEPARATION TANK TOP PUMP GATE" xml:space="preserve">
+    <value>Porta da bomba superior do tanque de separação</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM DISCHARGE PUMP" xml:space="preserve">
+    <value>Bomba de descarga inferior do tanque de separação</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM PUMP GATE" xml:space="preserve">
+    <value>Porta da bomba inferior do tanque de separação</value>
+  </data>
+  <data name="WATER TANK WATER PUMP TO 420" xml:space="preserve">
+    <value>Bomba de água do tanque de água para 420</value>
+  </data>
+  <data name="MATERIAL SELECTION" xml:space="preserve">
+    <value>Seleção de Materiais</value>
+  </data>
+  <data name="PLANT CONFIGURATION" xml:space="preserve">
+    <value>Configuração da planta</value>
+  </data>
+  <data name="HDPE" xml:space="preserve">
+    <value>PEAD</value>
+  </data>
+  <data name="PET" xml:space="preserve">
+    <value>PET</value>
+  </data>
+  <data name="HDPE MATERIAL" xml:space="preserve">
+    <value>Material PEAD</value>
+  </data>
+  <data name="PET MATERIAL" xml:space="preserve">
+    <value>Material PET</value>
+  </data>
+  <data name="SEARCHING HDPE POSITION" xml:space="preserve">
+    <value>Pesquisando posição HDPE</value>
+  </data>
+  <data name="SEARCHING PET POSITION" xml:space="preserve">
+    <value>Procurando Posição PET</value>
+  </data>
+  <data name="VALVES NOT OK" xml:space="preserve">
+    <value>Válvulas não estão OK</value>
+  </data>
+  <data name="RINSING REACTOR 1 AGITATOR" xml:space="preserve">
+    <value>Enxágue do Agitador do Reator 1</value>
+  </data>
+  <data name="RINSING REACTOR 2 AGITATOR" xml:space="preserve">
+    <value>Enxaguando o Agitador do Reator 2</value>
+  </data>
+  <data name="STATIC RELAY STATUS" xml:space="preserve">
+    <value>Status do relé estático</value>
+  </data>
+  <data name="COMMAND HEATING" xml:space="preserve">
+    <value>Comando de aquecimento</value>
+  </data>
+  <data name="RESISTOR CURRENT PHASE" xml:space="preserve">
+    <value>Fase atual do resistor</value>
+  </data>
+  <data name="STATIC RELAY NOT OK" xml:space="preserve">
+    <value>Relé estático não está ok</value>
+  </data>
+  <data name="CURRENT LEAKAGE (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER RESISTOR OFF)" xml:space="preserve">
+    <value>Vazamento de corrente (Amp &gt;5% do Amp nominal 5 segundos após o resistor ser desligado)</value>
+  </data>
+  <data name="CURRENT PHASE" xml:space="preserve">
+    <value>Fase Atual</value>
+  </data>
+  <data name="SILO LEVEL SENSOR OK" xml:space="preserve">
+    <value>Sensor de nível de silo ok</value>
+  </data>
+  <data name="SILO LEVEL SENSOR NOT OK FOR FILLING" xml:space="preserve">
+    <value>Sensor de nível de silo não está adequado para enchimento</value>
+  </data>
+  <data name="SILO NOT OVERFULL" xml:space="preserve">
+    <value>Silo não está cheio demais</value>
+  </data>
+  <data name="SILO OVERFULL" xml:space="preserve">
+    <value>Silo cheio demais</value>
+  </data>
+  <data name="AGITATOR (IN FILLING/DISCHARGING)" xml:space="preserve">
+    <value>Agitador (em enchimento/descarga)</value>
+  </data>
+  <data name="BLOWER" xml:space="preserve">
+    <value>Ventilador</value>
+  </data>
+  <data name="SAMPLING" xml:space="preserve">
+    <value>Amostragem</value>
+  </data>
+  <data name="SAMPLE REQUEST" xml:space="preserve">
+    <value>Pedido de amostra</value>
+  </data>
+  <data name="(1=REQ)" xml:space="preserve">
+    <value>(1=REQ)</value>
+  </data>
+  <data name="LOCAL REQUEST" xml:space="preserve">
+    <value>Solicitação local</value>
+  </data>
+  <data name="PRESS LOCAL PUSH BUTTON TO TAKE A SAMPLE" xml:space="preserve">
+    <value>Pressione o botão local para obter uma amostra</value>
+  </data>
+  <data name="PROCESS" xml:space="preserve">
+    <value>Processo</value>
+  </data>
+  <data name="BAGS DIVERTER" xml:space="preserve">
+    <value>Desviador de sacos</value>
+  </data>
+  <data name="BIG BAGS NOT OK FOR LOADING" xml:space="preserve">
+    <value>Big Bags não são adequados para carregamento</value>
+  </data>
+  <data name="BAGS VIEW" xml:space="preserve">
+    <value>Visualização de bolsas</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON ON CABINET HMI" xml:space="preserve">
+    <value>Botão de emergência na IHM do gabinete</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON (F-INPUT)" xml:space="preserve">
+    <value>SYS - Botão de Emergência (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE VOLTAGE PROTECTION (F-INPUT)" xml:space="preserve">
+    <value>SYS - Proteção contra surtos de tensão (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Dispositivo de proteção contra surtos</value>
+  </data>
+  <data name="SYS - CONTROL MODULE" xml:space="preserve">
+    <value>SYS - Módulo de Controle</value>
+  </data>
+  <data name="SYS - CONTROL MODULE RESET" xml:space="preserve">
+    <value>SYS - Reinicialização do Módulo de Controle</value>
+  </data>
+  <data name="SYS - AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Dispositivo de proteção contra surtos CA</value>
+  </data>
+  <data name="SYS - DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Dispositivo de proteção contra surtos DC</value>
+  </data>
+  <data name="SYS - MAIN POWER SWITCH (F-INPUT)" xml:space="preserve">
+    <value>SYS - Chave de alimentação principal (F-INPUT)</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON REDUNDANT F-INPUT" xml:space="preserve">
+    <value>SYS - Botão de Emergência Redundante F-INPUT</value>
+  </data>
+  <data name="SYS - COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>SYS - Canal do contator de parada de comando</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION IN CABINET HMI" xml:space="preserve">
+    <value>Proteção contra surtos de tensão no gabinete Hmi</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION (HMI)" xml:space="preserve">
+    <value>Proteção contra surtos de tensão (Hmi)</value>
+  </data>
+  <data name="24 VOLTS ANALOG INPUTS OK" xml:space="preserve">
+    <value>Entradas analógicas de 24 Volts ok</value>
+  </data>
+  <data name="SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Dispositivo de proteção contra surtos</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE STATUS OK" xml:space="preserve">
+    <value>Status do Módulo de Controle de Fornecimento OK</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE FAULT RESET COMMAND" xml:space="preserve">
+    <value>Comando de reinicialização de falha do módulo de controle de alimentação</value>
+  </data>
+  <data name="SURGE PROTECTION" xml:space="preserve">
+    <value>Proteção contra surtos</value>
+  </data>
+  <data name="OVERLOAD SUPPLY CONTROL MODULE" xml:space="preserve">
+    <value>Módulo de controle de fornecimento de sobrecarga</value>
+  </data>
+  <data name="PROFINET COMMUNICATION BREAKDOWN" xml:space="preserve">
+    <value>Análise da comunicação Profinet</value>
+  </data>
+  <data name="AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Dispositivo de proteção contra surtos CA</value>
+  </data>
+  <data name="DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Dispositivo de proteção contra surtos DC</value>
+  </data>
+  <data name="POWER SWITCH ON" xml:space="preserve">
+    <value>Ligar a energia</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON REDUNDANT" xml:space="preserve">
+    <value>Botão de emergência redundante</value>
+  </data>
+  <data name="COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>Comando Estop Contator Canal</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 0 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Botão Estop 0 - Falha de Hardware (Passivação de Entrada)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 1 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Botão Estop 1 - Falha de Hardware (Passivação de Entrada)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 2 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Botão Estop 2 - Falha de Hardware (Passivação de Entrada)</value>
+  </data>
+  <data name="CABINET MAIN POWER SURGE PROTECTION" xml:space="preserve">
+    <value>Proteção contra surtos de energia principal do gabinete</value>
+  </data>
+  <data name="CABINET POWER SUPPLY 24VDC SURGE PROTECTION" xml:space="preserve">
+    <value>Fonte de alimentação do gabinete 24Vdc proteção contra surtos</value>
+  </data>
+  <data name="POWER ANALYZER" xml:space="preserve">
+    <value>Analisador de potência</value>
+  </data>
+  <data name="CABINET LINE HIGH VOLTAGE" xml:space="preserve">
+    <value>Alta tensão da linha do gabinete</value>
+  </data>
+  <data name="CABINET LINE HIGH CURRENT" xml:space="preserve">
+    <value>Linha de gabinete de alta corrente</value>
+  </data>
+  <data name="CABINET LINE VOLTAGE UNBALANCED" xml:space="preserve">
+    <value>Tensão da linha do gabinete desequilibrada</value>
+  </data>
+  <data name="CABINET LINE CURRENT UNBALANCED" xml:space="preserve">
+    <value>Corrente da linha do gabinete desequilibrada</value>
+  </data>
+  <data name="LINE FREQUENCY OUT OF TOLERANCE" xml:space="preserve">
+    <value>Frequência de linha fora da tolerância</value>
+  </data>
+  <data name="POWER METER GENERAL ALARM" xml:space="preserve">
+    <value>Alarme geral do medidor de energia</value>
+  </data>
+  <data name="LINE VOLTAGE" xml:space="preserve">
+    <value>Tensão da linha</value>
+  </data>
+  <data name="AMPLITUDE UNBALANCED" xml:space="preserve">
+    <value>Amplitude desequilibrada</value>
+  </data>
+  <data name="LINE CURRENT" xml:space="preserve">
+    <value>Corrente de linha</value>
+  </data>
+  <data name="ACTIVE POWER" xml:space="preserve">
+    <value>Poder ativo</value>
+  </data>
+  <data name="REACTIVE POWER" xml:space="preserve">
+    <value>Potência reativa</value>
+  </data>
+  <data name="POWER FACTOR (COS-PHI)" xml:space="preserve">
+    <value>Fator de potência (Cos-Phi)</value>
+  </data>
+  <data name="LINE FREQUENCY" xml:space="preserve">
+    <value>Frequência de linha</value>
+  </data>
+  <data name="SYSTEM" xml:space="preserve">
+    <value>Sistema</value>
+  </data>
+  <data name="INFO_POWER_METER_1" xml:space="preserve">
+    <value>Alta tensão da fonte de alimentação do gabinete detectada! Contate seu fornecedor de energia</value>
+  </data>
+  <data name="INFO_POWER_METER_2" xml:space="preserve">
+    <value>Alta corrente da fonte de alimentação do gabinete detectada! Verifique a carga do gabinete</value>
+  </data>
+  <data name="INFO_POWER_METER_3" xml:space="preserve">
+    <value>Desequilíbrio de tensão detectado na fonte de alimentação do gabinete! Contate seu fornecedor de energia</value>
+  </data>
+  <data name="INFO_POWER_METER_4" xml:space="preserve">
+    <value>Desequilíbrio de corrente detectado na fonte de alimentação do gabinete! Verifique todas as cargas do gabinete fase por fase</value>
+  </data>
+  <data name="INFO_POWER_METER_5" xml:space="preserve">
+    <value>Status de falha do medidor de energia do gabinete - verifique localmente e redefina a falha</value>
+  </data>
+  <data name="INFO_POWER_METER_6" xml:space="preserve">
+    <value>Medidor de energia do gabinete com defeito off-line - Verifique a conexão ProfiNet com o dispositivo</value>
+  </data>
+  <data name="INFO_POWER_METER_7" xml:space="preserve">
+    <value>Frequência da linha de alimentação do gabinete fora da tolerância! Contate seu fornecedor de energia</value>
+  </data>
+  <data name="INFO_AMP_12" xml:space="preserve">
+    <value>Verifique o dispositivo, pois a circulação de corrente foi detectada quando o dispositivo foi desligado</value>
+  </data>
+  <data name="INFO_SYS_35" xml:space="preserve">
+    <value>Verifique o cabo Profinet, os conectores e a fonte de alimentação do módulo de comunicação</value>
+  </data>
 </root>
