--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -9258,4 +9258,394 @@
   <data name="DRYER - AIR LOCK" xml:space="preserve">
     <value>Dryer - Air Lock</value>
   </data>
+  <data name="MIXING" xml:space="preserve">
+    <value>Mixing</value>
+  </data>
+  <data name="SELECTION" xml:space="preserve">
+    <value>Selection</value>
+  </data>
+  <data name="SAMPLE" xml:space="preserve">
+    <value>Sample</value>
+  </data>
+  <data name="COMPONENTSTOPBUTTON" xml:space="preserve">
+    <value>Component Stop Button</value>
+  </data>
+  <data name="ADVANCEDTRENDS" xml:space="preserve">
+    <value>AdvancedTrends</value>
+  </data>
+  <data name="VOLTAGE" xml:space="preserve">
+    <value>Voltage</value>
+  </data>
+  <data name="POWER" xml:space="preserve">
+    <value>Power</value>
+  </data>
+  <data name="FREQUENCY" xml:space="preserve">
+    <value>Frequency</value>
+  </data>
+  <data name="NO SPEED REDUCTION" xml:space="preserve">
+    <value>No Speed Reduction</value>
+  </data>
+  <data name="REDUCTION SPEED IN PROGRESS" xml:space="preserve">
+    <value>Reduction Speed In Progress</value>
+  </data>
+  <data name="GATE CLOSED" xml:space="preserve">
+    <value>Gate Closed</value>
+  </data>
+  <data name="ACCESS GATE NOT CLOSED" xml:space="preserve">
+    <value>Access Gate Not Closed</value>
+  </data>
+  <data name="CHARGING CONVEYOR SAFETY KEY" xml:space="preserve">
+    <value>Charging Conveyor Safety Key</value>
+  </data>
+  <data name="CHARGING CONVEYOR GATE OPEN PROCEDURE" xml:space="preserve">
+    <value>Charging Conveyor Gate Open Procedure</value>
+  </data>
+  <data name="SAFETY PINS LOCKED" xml:space="preserve">
+    <value>Safety Pins Locked</value>
+  </data>
+  <data name="SAFETY PINS NOT LOCKED" xml:space="preserve">
+    <value>Safety Pins Not Locked</value>
+  </data>
+  <data name="ON REQUEST" xml:space="preserve">
+    <value>On Request</value>
+  </data>
+  <data name="HYDRAULIC UNIT ON" xml:space="preserve">
+    <value>Hydraulic Unit On</value>
+  </data>
+  <data name="DEBALER HYDRAULICS" xml:space="preserve">
+    <value>Debaler Hydraulics</value>
+  </data>
+  <data name="HIGH FILLING" xml:space="preserve">
+    <value>High Filling</value>
+  </data>
+  <data name="CALCULATED FILLLING" xml:space="preserve">
+    <value>Calculated Fillling</value>
+  </data>
+  <data name="(1=RELEASED 0=TRAPPED)" xml:space="preserve">
+    <value>(1=Released 0=Trapped)</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT REFERENCE ON)" xml:space="preserve">
+    <value>Disabled In Production (Constant Reference On)</value>
+  </data>
+  <data name="WATER TANK TREATED WATER" xml:space="preserve">
+    <value>Water Tank Treated Water</value>
+  </data>
+  <data name="WATER TREAMENT SIGNALS" xml:space="preserve">
+    <value>Water Treament Signals</value>
+  </data>
+  <data name="ACCELERATION BELT" xml:space="preserve">
+    <value>Acceleration Belt</value>
+  </data>
+  <data name="RUN-OFF SWITCH" xml:space="preserve">
+    <value>Run-Off Switch</value>
+  </data>
+  <data name="BELT MISALIGNMENT" xml:space="preserve">
+    <value>Belt Misalignment</value>
+  </data>
+  <data name="SORTER" xml:space="preserve">
+    <value>Sorter</value>
+  </data>
+  <data name="GRINDER NOT DISABLED" xml:space="preserve">
+    <value>Grinder Not Disabled</value>
+  </data>
+  <data name="DECANTER SKIMMER" xml:space="preserve">
+    <value>Decanter Skimmer</value>
+  </data>
+  <data name="OK FOR PROCESS - MAX LEVEL" xml:space="preserve">
+    <value>Ok For Process - Max Level</value>
+  </data>
+  <data name="WAITING TO GO BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Waiting To Go Below Maximum Level</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Emptying Time Below Maximum Level</value>
+  </data>
+  <data name="WCE FRESH WATER CLEANING" xml:space="preserve">
+    <value>Wce Fresh Water Cleaning</value>
+  </data>
+  <data name="WCE STEAM CLEANING" xml:space="preserve">
+    <value>Wce Steam Cleaning</value>
+  </data>
+  <data name="SEPARATION TANK TOP DISCHARGE PUMP" xml:space="preserve">
+    <value>Separation Tank Top Discharge Pump</value>
+  </data>
+  <data name="SEPARATION TANK TOP PUMP GATE" xml:space="preserve">
+    <value>Separation Tank Top Pump Gate</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM DISCHARGE PUMP" xml:space="preserve">
+    <value>Separation Tank Bottom Discharge Pump</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM PUMP GATE" xml:space="preserve">
+    <value>Separation Tank Bottom Pump Gate</value>
+  </data>
+  <data name="WATER TANK WATER PUMP TO 420" xml:space="preserve">
+    <value>Water Tank Water Pump To 420</value>
+  </data>
+  <data name="MATERIAL SELECTION" xml:space="preserve">
+    <value>Material Selection</value>
+  </data>
+  <data name="PLANT CONFIGURATION" xml:space="preserve">
+    <value>Plant Configuration</value>
+  </data>
+  <data name="HDPE" xml:space="preserve">
+    <value>HDPE</value>
+  </data>
+  <data name="PET" xml:space="preserve">
+    <value>PET</value>
+  </data>
+  <data name="HDPE MATERIAL" xml:space="preserve">
+    <value>HDPE Material</value>
+  </data>
+  <data name="PET MATERIAL" xml:space="preserve">
+    <value>PET Material</value>
+  </data>
+  <data name="SEARCHING HDPE POSITION" xml:space="preserve">
+    <value>Searching HDPE Position</value>
+  </data>
+  <data name="SEARCHING PET POSITION" xml:space="preserve">
+    <value>Searching PET Position</value>
+  </data>
+  <data name="VALVES NOT OK" xml:space="preserve">
+    <value>Valves Not OK</value>
+  </data>
+  <data name="RINSING REACTOR 1 AGITATOR" xml:space="preserve">
+    <value>Rinsing Reactor 1 Agitator</value>
+  </data>
+  <data name="RINSING REACTOR 2 AGITATOR" xml:space="preserve">
+    <value>Rinsing Reactor 2 Agitator</value>
+  </data>
+  <data name="STATIC RELAY STATUS" xml:space="preserve">
+    <value>Static Relay Status</value>
+  </data>
+  <data name="COMMAND HEATING" xml:space="preserve">
+    <value>Command Heating</value>
+  </data>
+  <data name="RESISTOR CURRENT PHASE" xml:space="preserve">
+    <value>Resistor Current Phase</value>
+  </data>
+  <data name="STATIC RELAY NOT OK" xml:space="preserve">
+    <value>Static Relay Not Ok</value>
+  </data>
+  <data name="CURRENT LEAKAGE (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER RESISTOR OFF)" xml:space="preserve">
+    <value>Current Leakage (Amp &gt;5% Of Nominal Amp 5 Sec After Resistor Off)</value>
+  </data>
+  <data name="CURRENT PHASE" xml:space="preserve">
+    <value>Current Phase</value>
+  </data>
+  <data name="SILO LEVEL SENSOR OK" xml:space="preserve">
+    <value>Silo Level Sensor Ok</value>
+  </data>
+  <data name="SILO LEVEL SENSOR NOT OK FOR FILLING" xml:space="preserve">
+    <value>Silo Level Sensor Not Ok For Filling</value>
+  </data>
+  <data name="SILO NOT OVERFULL" xml:space="preserve">
+    <value>Silo Not Overfull</value>
+  </data>
+  <data name="SILO OVERFULL" xml:space="preserve">
+    <value>Silo Overfull</value>
+  </data>
+  <data name="AGITATOR (IN FILLING/DISCHARGING)" xml:space="preserve">
+    <value>Agitator (In Filling/Discharging)</value>
+  </data>
+  <data name="BLOWER" xml:space="preserve">
+    <value>Blower</value>
+  </data>
+  <data name="SAMPLING" xml:space="preserve">
+    <value>Sampling</value>
+  </data>
+  <data name="SAMPLE REQUEST" xml:space="preserve">
+    <value>Sample Request</value>
+  </data>
+  <data name="(1=REQ)" xml:space="preserve">
+    <value>(1=REQ)</value>
+  </data>
+  <data name="LOCAL REQUEST" xml:space="preserve">
+    <value>Local Request</value>
+  </data>
+  <data name="PRESS LOCAL PUSH BUTTON TO TAKE A SAMPLE" xml:space="preserve">
+    <value>Press Local Push Button To Take A Sample</value>
+  </data>
+  <data name="PROCESS" xml:space="preserve">
+    <value>Process</value>
+  </data>
+  <data name="BAGS DIVERTER" xml:space="preserve">
+    <value>Bags Diverter</value>
+  </data>
+  <data name="BIG BAGS NOT OK FOR LOADING" xml:space="preserve">
+    <value>Big Bags Not Ok For Loading</value>
+  </data>
+  <data name="BAGS VIEW" xml:space="preserve">
+    <value>Bags View</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON ON CABINET HMI" xml:space="preserve">
+    <value>Emergency Push Button on Cabinet HMI</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON (F-INPUT)" xml:space="preserve">
+    <value>SYS - Emergency Push Button (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE VOLTAGE PROTECTION (F-INPUT)" xml:space="preserve">
+    <value>SYS - Surge Voltage Protection (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Surge Protection Device</value>
+  </data>
+  <data name="SYS - CONTROL MODULE" xml:space="preserve">
+    <value>SYS - Control Module</value>
+  </data>
+  <data name="SYS - CONTROL MODULE RESET" xml:space="preserve">
+    <value>SYS - Control Module Reset</value>
+  </data>
+  <data name="SYS - AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - AC Surge Protection Device</value>
+  </data>
+  <data name="SYS - DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - DC Surge Protection Device</value>
+  </data>
+  <data name="SYS - MAIN POWER SWITCH (F-INPUT)" xml:space="preserve">
+    <value>SYS - Main Power Switch (F-INPUT)</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON REDUNDANT F-INPUT" xml:space="preserve">
+    <value>SYS - Emergency Push Button Redundant F-INPUT</value>
+  </data>
+  <data name="SYS - COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>SYS - Command Estop Contactor Channel</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION IN CABINET HMI" xml:space="preserve">
+    <value>Surge Voltage Protection In Cabinet Hmi</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION (HMI)" xml:space="preserve">
+    <value>Surge Voltage Protection (Hmi)</value>
+  </data>
+  <data name="24 VOLTS ANALOG INPUTS OK" xml:space="preserve">
+    <value>24 Volts Analog Inputs Ok</value>
+  </data>
+  <data name="SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Surge Protection Device</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE STATUS OK" xml:space="preserve">
+    <value>Supply Control Module Status Ok</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE FAULT RESET COMMAND" xml:space="preserve">
+    <value>Supply Control Module Fault Reset Command</value>
+  </data>
+  <data name="SURGE PROTECTION" xml:space="preserve">
+    <value>Surge Protection</value>
+  </data>
+  <data name="OVERLOAD SUPPLY CONTROL MODULE" xml:space="preserve">
+    <value>Overload Supply Control Module</value>
+  </data>
+  <data name="PROFINET COMMUNICATION BREAKDOWN" xml:space="preserve">
+    <value>Profinet Communication Breakdown</value>
+  </data>
+  <data name="AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>AC Surge Protection Device</value>
+  </data>
+  <data name="DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>DC Surge Protection Device</value>
+  </data>
+  <data name="POWER SWITCH ON" xml:space="preserve">
+    <value>Power Switch ON</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON REDUNDANT" xml:space="preserve">
+    <value>Emergency Push Button Redundant</value>
+  </data>
+  <data name="COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>Command Estop Contactor Channel</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 0 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Estop Push-Button 0 - Hardware Fault (Input Passivation)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 1 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Estop Push-Button 1 - Hardware Fault (Input Passivation)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 2 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Estop Push-Button 2 - Hardware Fault (Input Passivation)</value>
+  </data>
+  <data name="CABINET MAIN POWER SURGE PROTECTION" xml:space="preserve">
+    <value>Cabinet Main Power Surge Protection</value>
+  </data>
+  <data name="CABINET POWER SUPPLY 24VDC SURGE PROTECTION" xml:space="preserve">
+    <value>Cabinet Power Supply 24Vdc Surge Protection</value>
+  </data>
+  <data name="POWER ANALYZER" xml:space="preserve">
+    <value>Power Analyzer</value>
+  </data>
+  <data name="CABINET LINE HIGH VOLTAGE" xml:space="preserve">
+    <value>Cabinet Line High Voltage</value>
+  </data>
+  <data name="CABINET LINE HIGH CURRENT" xml:space="preserve">
+    <value>Cabinet Line High Current</value>
+  </data>
+  <data name="CABINET LINE VOLTAGE UNBALANCED" xml:space="preserve">
+    <value>Cabinet Line Voltage Unbalanced</value>
+  </data>
+  <data name="CABINET LINE CURRENT UNBALANCED" xml:space="preserve">
+    <value>Cabinet Line Current Unbalanced</value>
+  </data>
+  <data name="LINE FREQUENCY OUT OF TOLERANCE" xml:space="preserve">
+    <value>Line Frequency Out Of Tolerance</value>
+  </data>
+  <data name="POWER METER GENERAL ALARM" xml:space="preserve">
+    <value>Power Meter General Alarm</value>
+  </data>
+  <data name="LINE VOLTAGE" xml:space="preserve">
+    <value>Line Voltage</value>
+  </data>
+  <data name="AMPLITUDE UNBALANCED" xml:space="preserve">
+    <value>Amplitude Unbalanced</value>
+  </data>
+  <data name="LINE CURRENT" xml:space="preserve">
+    <value>Line Current</value>
+  </data>
+  <data name="ACTIVE POWER" xml:space="preserve">
+    <value>Active Power</value>
+  </data>
+  <data name="REACTIVE POWER" xml:space="preserve">
+    <value>Reactive Power</value>
+  </data>
+  <data name="POWER FACTOR (COS-PHI)" xml:space="preserve">
+    <value>Power Factor (Cos-Phi)</value>
+  </data>
+  <data name="LINE FREQUENCY" xml:space="preserve">
+    <value>Line Frequency</value>
+  </data>
+  <data name="SYSTEM" xml:space="preserve">
+    <value>System</value>
+  </data>
+  <data name="INFO_POWER_METER_1" xml:space="preserve">
+    <value>Cabinet Power Supply High Voltage Detected ! Contact Your Energy Supplier</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_POWER_METER_2" xml:space="preserve">
+    <value>Cabinet Power Supply High Current Detected ! Check Cabinet Load</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_POWER_METER_3" xml:space="preserve">
+    <value>Cabinet Power Supply Unbalnace Of Voltage Detected ! Contact Your Energy Supplier</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_POWER_METER_4" xml:space="preserve">
+    <value>Cabinet Power Supply Unbalance Of Current Detected ! Check All Cabinet Loads Phase By Phase</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_POWER_METER_5" xml:space="preserve">
+    <value>Cabinet Power Meter Faulty Status - Check it Locally And Reset The fault</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_POWER_METER_6" xml:space="preserve">
+    <value>Cabinet Power Meter Faulty Offline - Check The ProfiNet Connection With The Device</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_POWER_METER_7" xml:space="preserve">
+    <value>Cabinet Power Supply Line Frequency Out Of Tolerance ! Contact Your Energy Supplier</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_AMP_12" xml:space="preserve">
+    <value>Check The Device Since Current Circulation Was Detected When The Device Was Switched OFF</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_SYS_35" xml:space="preserve">
+    <value>Check Profinet Cable, Connectors And Communication Module Power Supply</value>
+    <comment>InfoText Fault</comment>
+  </data>
 </root>
