--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -8913,4 +8913,385 @@
   <data name="DRYER - AIR LOCK" xml:space="preserve">
     <value>Uscător - Air Lock</value>
   </data>
+  <data name="MIXING" xml:space="preserve">
+    <value>Amestecarea</value>
+  </data>
+  <data name="SELECTION" xml:space="preserve">
+    <value>Selecţie</value>
+  </data>
+  <data name="SAMPLE" xml:space="preserve">
+    <value>Probă</value>
+  </data>
+  <data name="COMPONENTSTOPBUTTON" xml:space="preserve">
+    <value>Buton de oprire a componentelor</value>
+  </data>
+  <data name="ADVANCEDTRENDS" xml:space="preserve">
+    <value>Tendințe avansate</value>
+  </data>
+  <data name="VOLTAGE" xml:space="preserve">
+    <value>Voltaj</value>
+  </data>
+  <data name="POWER" xml:space="preserve">
+    <value>Putere</value>
+  </data>
+  <data name="FREQUENCY" xml:space="preserve">
+    <value>Frecvență</value>
+  </data>
+  <data name="NO SPEED REDUCTION" xml:space="preserve">
+    <value>Fără reducere a vitezei</value>
+  </data>
+  <data name="REDUCTION SPEED IN PROGRESS" xml:space="preserve">
+    <value>Viteza de reducere în curs</value>
+  </data>
+  <data name="GATE CLOSED" xml:space="preserve">
+    <value>Poarta inchisa</value>
+  </data>
+  <data name="ACCESS GATE NOT CLOSED" xml:space="preserve">
+    <value>Poarta de acces nu este închisă</value>
+  </data>
+  <data name="CHARGING CONVEYOR SAFETY KEY" xml:space="preserve">
+    <value>Cheia de siguranță a transportorului de încărcare</value>
+  </data>
+  <data name="CHARGING CONVEYOR GATE OPEN PROCEDURE" xml:space="preserve">
+    <value>Procedura de deschidere a poarta transportorului de încărcare</value>
+  </data>
+  <data name="SAFETY PINS LOCKED" xml:space="preserve">
+    <value>Ace de siguranță blocate</value>
+  </data>
+  <data name="SAFETY PINS NOT LOCKED" xml:space="preserve">
+    <value>Ace de siguranță nu sunt blocate</value>
+  </data>
+  <data name="ON REQUEST" xml:space="preserve">
+    <value>La cerere</value>
+  </data>
+  <data name="HYDRAULIC UNIT ON" xml:space="preserve">
+    <value>Unit hidraulic pornit</value>
+  </data>
+  <data name="DEBALER HYDRAULICS" xml:space="preserve">
+    <value>Hidraulica debalatoare</value>
+  </data>
+  <data name="HIGH FILLING" xml:space="preserve">
+    <value>Umplere ridicată</value>
+  </data>
+  <data name="CALCULATED FILLLING" xml:space="preserve">
+    <value>Umplere calculată</value>
+  </data>
+  <data name="(1=RELEASED 0=TRAPPED)" xml:space="preserve">
+    <value>(1=Eliberat 0=Capcană)</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT REFERENCE ON)" xml:space="preserve">
+    <value>Dezactivat în producție (referință constantă activată)</value>
+  </data>
+  <data name="WATER TANK TREATED WATER" xml:space="preserve">
+    <value>Apa tratata rezervor de apa</value>
+  </data>
+  <data name="WATER TREAMENT SIGNALS" xml:space="preserve">
+    <value>Semnale de tratare a apei</value>
+  </data>
+  <data name="ACCELERATION BELT" xml:space="preserve">
+    <value>Centura de accelerare</value>
+  </data>
+  <data name="RUN-OFF SWITCH" xml:space="preserve">
+    <value>Comutator de rulare</value>
+  </data>
+  <data name="BELT MISALIGNMENT" xml:space="preserve">
+    <value>Nealinierea curelei</value>
+  </data>
+  <data name="SORTER" xml:space="preserve">
+    <value>Sortator</value>
+  </data>
+  <data name="GRINDER NOT DISABLED" xml:space="preserve">
+    <value>Polizorul nu este dezactivat</value>
+  </data>
+  <data name="DECANTER SKIMMER" xml:space="preserve">
+    <value>Decantor Skimmer</value>
+  </data>
+  <data name="OK FOR PROCESS - MAX LEVEL" xml:space="preserve">
+    <value>Ok pentru proces - Nivel maxim</value>
+  </data>
+  <data name="WAITING TO GO BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Așteaptă să coboare sub nivelul maxim</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Timp de golire sub nivelul maxim</value>
+  </data>
+  <data name="WCE FRESH WATER CLEANING" xml:space="preserve">
+    <value>Wce Curățare cu apă dulce</value>
+  </data>
+  <data name="WCE STEAM CLEANING" xml:space="preserve">
+    <value>Curăţare cu abur Wce</value>
+  </data>
+  <data name="SEPARATION TANK TOP DISCHARGE PUMP" xml:space="preserve">
+    <value>Pompă de descărcare de separare a rezervorului</value>
+  </data>
+  <data name="SEPARATION TANK TOP PUMP GATE" xml:space="preserve">
+    <value>Poarta pompei de separare a rezervorului</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM DISCHARGE PUMP" xml:space="preserve">
+    <value>Pompă de descărcare în partea inferioară a rezervorului de separare</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM PUMP GATE" xml:space="preserve">
+    <value>Poarta inferioară a pompei rezervor de separare</value>
+  </data>
+  <data name="WATER TANK WATER PUMP TO 420" xml:space="preserve">
+    <value>Rezervor de apă Pompă de apă la 420</value>
+  </data>
+  <data name="MATERIAL SELECTION" xml:space="preserve">
+    <value>Selectarea materialelor</value>
+  </data>
+  <data name="PLANT CONFIGURATION" xml:space="preserve">
+    <value>Configurarea instalației</value>
+  </data>
+  <data name="HDPE" xml:space="preserve">
+    <value>HDPE</value>
+  </data>
+  <data name="PET" xml:space="preserve">
+    <value>PET</value>
+  </data>
+  <data name="HDPE MATERIAL" xml:space="preserve">
+    <value>Material HDPE</value>
+  </data>
+  <data name="PET MATERIAL" xml:space="preserve">
+    <value>Material PET</value>
+  </data>
+  <data name="SEARCHING HDPE POSITION" xml:space="preserve">
+    <value>Căutarea poziției HDPE</value>
+  </data>
+  <data name="SEARCHING PET POSITION" xml:space="preserve">
+    <value>Căutarea poziției PET</value>
+  </data>
+  <data name="VALVES NOT OK" xml:space="preserve">
+    <value>Supapele nu sunt ok</value>
+  </data>
+  <data name="RINSING REACTOR 1 AGITATOR" xml:space="preserve">
+    <value>Clătire Reactorul 1 Agitator</value>
+  </data>
+  <data name="RINSING REACTOR 2 AGITATOR" xml:space="preserve">
+    <value>Clătire Reactor 2 Agitator</value>
+  </data>
+  <data name="STATIC RELAY STATUS" xml:space="preserve">
+    <value>Starea releului static</value>
+  </data>
+  <data name="COMMAND HEATING" xml:space="preserve">
+    <value>Comandă încălzire</value>
+  </data>
+  <data name="RESISTOR CURRENT PHASE" xml:space="preserve">
+    <value>Faza curentului rezistenței</value>
+  </data>
+  <data name="STATIC RELAY NOT OK" xml:space="preserve">
+    <value>Releul static nu este ok</value>
+  </data>
+  <data name="CURRENT LEAKAGE (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER RESISTOR OFF)" xml:space="preserve">
+    <value>Scurgere de curent (Amp &gt;5% din Amper nominal 5 secunde după oprirea rezistenței)</value>
+  </data>
+  <data name="CURRENT PHASE" xml:space="preserve">
+    <value>Faza curentă</value>
+  </data>
+  <data name="SILO LEVEL SENSOR OK" xml:space="preserve">
+    <value>Senzor de nivel siloz Ok</value>
+  </data>
+  <data name="SILO LEVEL SENSOR NOT OK FOR FILLING" xml:space="preserve">
+    <value>Senzorul de nivel al silozului nu este ok pentru umplere</value>
+  </data>
+  <data name="SILO NOT OVERFULL" xml:space="preserve">
+    <value>Silozul nu este prea plin</value>
+  </data>
+  <data name="SILO OVERFULL" xml:space="preserve">
+    <value>Siloz excesiv</value>
+  </data>
+  <data name="AGITATOR (IN FILLING/DISCHARGING)" xml:space="preserve">
+    <value>Agitator (în umplere/descărcare)</value>
+  </data>
+  <data name="BLOWER" xml:space="preserve">
+    <value>Suflantă</value>
+  </data>
+  <data name="SAMPLING" xml:space="preserve">
+    <value>Prelevarea de probe</value>
+  </data>
+  <data name="SAMPLE REQUEST" xml:space="preserve">
+    <value>Cerere de mostra</value>
+  </data>
+  <data name="(1=REQ)" xml:space="preserve">
+    <value>(1=REQ)</value>
+  </data>
+  <data name="LOCAL REQUEST" xml:space="preserve">
+    <value>Cerere locală</value>
+  </data>
+  <data name="PRESS LOCAL PUSH BUTTON TO TAKE A SAMPLE" xml:space="preserve">
+    <value>Apăsați butonul local pentru a preleva o probă</value>
+  </data>
+  <data name="PROCESS" xml:space="preserve">
+    <value>Proces</value>
+  </data>
+  <data name="BAGS DIVERTER" xml:space="preserve">
+    <value>Deviator de saci</value>
+  </data>
+  <data name="BIG BAGS NOT OK FOR LOADING" xml:space="preserve">
+    <value>Saci mari nu sunt ok pentru încărcare</value>
+  </data>
+  <data name="BAGS VIEW" xml:space="preserve">
+    <value>Vizualizare Genti</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON ON CABINET HMI" xml:space="preserve">
+    <value>Buton de apăsare de urgență pe HMI-ul cabinetului</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON (F-INPUT)" xml:space="preserve">
+    <value>SYS - Buton de apăsare de urgență (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE VOLTAGE PROTECTION (F-INPUT)" xml:space="preserve">
+    <value>SYS - Protecție la supratensiune (F-INPUT)</value>
+  </data>
+  <data name="SYS - SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Dispozitiv de protecție la supratensiune</value>
+  </data>
+  <data name="SYS - CONTROL MODULE" xml:space="preserve">
+    <value>SYS - Modul de control</value>
+  </data>
+  <data name="SYS - CONTROL MODULE RESET" xml:space="preserve">
+    <value>SYS - Resetare modul de control</value>
+  </data>
+  <data name="SYS - AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Dispozitiv de protecție la supratensiune AC</value>
+  </data>
+  <data name="SYS - DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - Dispozitiv de protecție la supratensiune DC</value>
+  </data>
+  <data name="SYS - MAIN POWER SWITCH (F-INPUT)" xml:space="preserve">
+    <value>SYS - Comutator principal de alimentare (F-INPUT)</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON REDUNDANT F-INPUT" xml:space="preserve">
+    <value>SYS - Buton de urgență Redundant F-INPUT</value>
+  </data>
+  <data name="SYS - COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>SYS - Command Estop Contactor Channel</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION IN CABINET HMI" xml:space="preserve">
+    <value>Protecție la supratensiune în cabinet Hmi</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION (HMI)" xml:space="preserve">
+    <value>Protecție la supratensiune (HMI)</value>
+  </data>
+  <data name="24 VOLTS ANALOG INPUTS OK" xml:space="preserve">
+    <value>Intrări analogice 24 volți Ok</value>
+  </data>
+  <data name="SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Dispozitiv de protecție la supratensiune</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE STATUS OK" xml:space="preserve">
+    <value>Stare modul de control al sursei Ok</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE FAULT RESET COMMAND" xml:space="preserve">
+    <value>Comandă de resetare a erorilor modulului de control al alimentării</value>
+  </data>
+  <data name="SURGE PROTECTION" xml:space="preserve">
+    <value>Protectie la supratensiune</value>
+  </data>
+  <data name="OVERLOAD SUPPLY CONTROL MODULE" xml:space="preserve">
+    <value>Modul de control al alimentării la suprasarcină</value>
+  </data>
+  <data name="PROFINET COMMUNICATION BREAKDOWN" xml:space="preserve">
+    <value>Defalcarea comunicării Profinet</value>
+  </data>
+  <data name="AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Dispozitiv de protecție la supratensiune AC</value>
+  </data>
+  <data name="DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>Dispozitiv de protecție la supratensiune DC</value>
+  </data>
+  <data name="POWER SWITCH ON" xml:space="preserve">
+    <value>Comutator de alimentare ON</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON REDUNDANT" xml:space="preserve">
+    <value>Buton de apăsare de urgență redundant</value>
+  </data>
+  <data name="COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>Canalul contactor Command Estop</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 0 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Butonul de oprire 0 - Eroare hardware (pasivare intrare)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 1 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Butonul de apasare 1 - Eroare hardware (pasivare intrare)</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 2 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>Buton de apăsare 2 - Eroare hardware (pasivare intrare)</value>
+  </data>
+  <data name="CABINET MAIN POWER SURGE PROTECTION" xml:space="preserve">
+    <value>Protecție la supratensiune principală a dulapului</value>
+  </data>
+  <data name="CABINET POWER SUPPLY 24VDC SURGE PROTECTION" xml:space="preserve">
+    <value>Sursa de alimentare 24Vdc Protecție la supratensiune</value>
+  </data>
+  <data name="POWER ANALYZER" xml:space="preserve">
+    <value>Analizor de putere</value>
+  </data>
+  <data name="CABINET LINE HIGH VOLTAGE" xml:space="preserve">
+    <value>Linia Cabinetului de înaltă tensiune</value>
+  </data>
+  <data name="CABINET LINE HIGH CURRENT" xml:space="preserve">
+    <value>Curenți ridicati pentru linia cabinetului</value>
+  </data>
+  <data name="CABINET LINE VOLTAGE UNBALANCED" xml:space="preserve">
+    <value>Tensiune de linie a cabinetului dezechilibrat</value>
+  </data>
+  <data name="CABINET LINE CURRENT UNBALANCED" xml:space="preserve">
+    <value>Curentul de linie a cabinetului dezechilibrat</value>
+  </data>
+  <data name="LINE FREQUENCY OUT OF TOLERANCE" xml:space="preserve">
+    <value>Frecvența liniei în afara toleranței</value>
+  </data>
+  <data name="POWER METER GENERAL ALARM" xml:space="preserve">
+    <value>Alarma generală a contorului de putere</value>
+  </data>
+  <data name="LINE VOLTAGE" xml:space="preserve">
+    <value>Tensiune de linie</value>
+  </data>
+  <data name="AMPLITUDE UNBALANCED" xml:space="preserve">
+    <value>Amplitudine dezechilibrata</value>
+  </data>
+  <data name="LINE CURRENT" xml:space="preserve">
+    <value>Curent de linie</value>
+  </data>
+  <data name="ACTIVE POWER" xml:space="preserve">
+    <value>Putere activă</value>
+  </data>
+  <data name="REACTIVE POWER" xml:space="preserve">
+    <value>Putere reactivă</value>
+  </data>
+  <data name="POWER FACTOR (COS-PHI)" xml:space="preserve">
+    <value>Factorul de putere (Cos-Phi)</value>
+  </data>
+  <data name="LINE FREQUENCY" xml:space="preserve">
+    <value>Frecvența liniei</value>
+  </data>
+  <data name="SYSTEM" xml:space="preserve">
+    <value>Sistem</value>
+  </data>
+  <data name="INFO_POWER_METER_1" xml:space="preserve">
+    <value>Tensiune înaltă a sursei de alimentare a cabinetului a fost detectată! Contactați furnizorul dvs. de energie</value>
+  </data>
+  <data name="INFO_POWER_METER_2" xml:space="preserve">
+    <value>S-a detectat un curent ridicat al sursei de alimentare a dulapului! Verificați încărcarea dulapului</value>
+  </data>
+  <data name="INFO_POWER_METER_3" xml:space="preserve">
+    <value>S-a detectat un dezechilibru de tensiune al sursei de alimentare a cabinetului! Contactați furnizorul dvs. de energie</value>
+  </data>
+  <data name="INFO_POWER_METER_4" xml:space="preserve">
+    <value>S-a detectat un dezechilibru de curent al sursei de alimentare a cabinetului! Verificați toate încărcările dulapului fază cu fază</value>
+  </data>
+  <data name="INFO_POWER_METER_5" xml:space="preserve">
+    <value>Stare defectuoasă a contorului de putere din cabinet - Verificați-l local și resetați defecțiunea</value>
+  </data>
+  <data name="INFO_POWER_METER_6" xml:space="preserve">
+    <value>Contorul de putere din cabinet este defect offline - Verificați conexiunea ProfiNet cu dispozitivul</value>
+  </data>
+  <data name="INFO_POWER_METER_7" xml:space="preserve">
+    <value>Frecvența liniei de alimentare a cabinetului este în afara toleranței! Contactați furnizorul dvs. de energie</value>
+  </data>
+  <data name="INFO_AMP_12" xml:space="preserve">
+    <value>Verificați dispozitivul deoarece circulația curentă a fost detectată când dispozitivul a fost oprit</value>
+  </data>
+  <data name="INFO_SYS_35" xml:space="preserve">
+    <value>Verificați cablul, conectorii și sursa de alimentare a modulului de comunicație Profinet</value>
+  </data>
 </root>
