--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -8913,4 +8913,385 @@
   <data name="DRYER - AIR LOCK" xml:space="preserve">
     <value>干燥机 - 气闸</value>
   </data>
+  <data name="MIXING" xml:space="preserve">
+    <value>混合</value>
+  </data>
+  <data name="SELECTION" xml:space="preserve">
+    <value>选择</value>
+  </data>
+  <data name="SAMPLE" xml:space="preserve">
+    <value>样本</value>
+  </data>
+  <data name="COMPONENTSTOPBUTTON" xml:space="preserve">
+    <value>组件停止按钮</value>
+  </data>
+  <data name="ADVANCEDTRENDS" xml:space="preserve">
+    <value>高级趋势</value>
+  </data>
+  <data name="VOLTAGE" xml:space="preserve">
+    <value>电压</value>
+  </data>
+  <data name="POWER" xml:space="preserve">
+    <value>力量</value>
+  </data>
+  <data name="FREQUENCY" xml:space="preserve">
+    <value>频率</value>
+  </data>
+  <data name="NO SPEED REDUCTION" xml:space="preserve">
+    <value>无减速</value>
+  </data>
+  <data name="REDUCTION SPEED IN PROGRESS" xml:space="preserve">
+    <value>减速速度进行中</value>
+  </data>
+  <data name="GATE CLOSED" xml:space="preserve">
+    <value>大门已关闭</value>
+  </data>
+  <data name="ACCESS GATE NOT CLOSED" xml:space="preserve">
+    <value>检修门未关闭</value>
+  </data>
+  <data name="CHARGING CONVEYOR SAFETY KEY" xml:space="preserve">
+    <value>充电输送机安全钥匙</value>
+  </data>
+  <data name="CHARGING CONVEYOR GATE OPEN PROCEDURE" xml:space="preserve">
+    <value>装料输送机门打开程序</value>
+  </data>
+  <data name="SAFETY PINS LOCKED" xml:space="preserve">
+    <value>安全别针已锁定</value>
+  </data>
+  <data name="SAFETY PINS NOT LOCKED" xml:space="preserve">
+    <value>安全别针未锁定</value>
+  </data>
+  <data name="ON REQUEST" xml:space="preserve">
+    <value>根据要求</value>
+  </data>
+  <data name="HYDRAULIC UNIT ON" xml:space="preserve">
+    <value>液压装置开启</value>
+  </data>
+  <data name="DEBALER HYDRAULICS" xml:space="preserve">
+    <value>拆包机液压系统</value>
+  </data>
+  <data name="HIGH FILLING" xml:space="preserve">
+    <value>高填充</value>
+  </data>
+  <data name="CALCULATED FILLLING" xml:space="preserve">
+    <value>计算填充</value>
+  </data>
+  <data name="(1=RELEASED 0=TRAPPED)" xml:space="preserve">
+    <value>(1=释放 0=被困)</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT REFERENCE ON)" xml:space="preserve">
+    <value>在生产中禁用（恒定参考打开）</value>
+  </data>
+  <data name="WATER TANK TREATED WATER" xml:space="preserve">
+    <value>水箱处理水</value>
+  </data>
+  <data name="WATER TREAMENT SIGNALS" xml:space="preserve">
+    <value>水处理信号</value>
+  </data>
+  <data name="ACCELERATION BELT" xml:space="preserve">
+    <value>加速带</value>
+  </data>
+  <data name="RUN-OFF SWITCH" xml:space="preserve">
+    <value>断流开关</value>
+  </data>
+  <data name="BELT MISALIGNMENT" xml:space="preserve">
+    <value>皮带不对中</value>
+  </data>
+  <data name="SORTER" xml:space="preserve">
+    <value>分拣机</value>
+  </data>
+  <data name="GRINDER NOT DISABLED" xml:space="preserve">
+    <value>磨床未禁用</value>
+  </data>
+  <data name="DECANTER SKIMMER" xml:space="preserve">
+    <value>卧螺离心机</value>
+  </data>
+  <data name="OK FOR PROCESS - MAX LEVEL" xml:space="preserve">
+    <value>适合进程 - 最高级别</value>
+  </data>
+  <data name="WAITING TO GO BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>等待低于最高水平</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>排空时间低于最大水平</value>
+  </data>
+  <data name="WCE FRESH WATER CLEANING" xml:space="preserve">
+    <value>Wce淡水清洁</value>
+  </data>
+  <data name="WCE STEAM CLEANING" xml:space="preserve">
+    <value>Wce蒸汽清洗</value>
+  </data>
+  <data name="SEPARATION TANK TOP DISCHARGE PUMP" xml:space="preserve">
+    <value>分离罐顶部排放泵</value>
+  </data>
+  <data name="SEPARATION TANK TOP PUMP GATE" xml:space="preserve">
+    <value>分离罐顶泵闸门</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM DISCHARGE PUMP" xml:space="preserve">
+    <value>分离罐底部排出泵</value>
+  </data>
+  <data name="SEPARATION TANK BOTTOM PUMP GATE" xml:space="preserve">
+    <value>分离罐底部泵闸</value>
+  </data>
+  <data name="WATER TANK WATER PUMP TO 420" xml:space="preserve">
+    <value>水箱水泵至420</value>
+  </data>
+  <data name="MATERIAL SELECTION" xml:space="preserve">
+    <value>材质选择</value>
+  </data>
+  <data name="PLANT CONFIGURATION" xml:space="preserve">
+    <value>工厂配置</value>
+  </data>
+  <data name="HDPE" xml:space="preserve">
+    <value>高密度聚乙烯</value>
+  </data>
+  <data name="PET" xml:space="preserve">
+    <value>PET</value>
+  </data>
+  <data name="HDPE MATERIAL" xml:space="preserve">
+    <value>高密度聚乙烯材料</value>
+  </data>
+  <data name="PET MATERIAL" xml:space="preserve">
+    <value>聚酯材质</value>
+  </data>
+  <data name="SEARCHING HDPE POSITION" xml:space="preserve">
+    <value>搜索 HDPE 位置</value>
+  </data>
+  <data name="SEARCHING PET POSITION" xml:space="preserve">
+    <value>搜索 PET 位置</value>
+  </data>
+  <data name="VALVES NOT OK" xml:space="preserve">
+    <value>阀门不正常</value>
+  </data>
+  <data name="RINSING REACTOR 1 AGITATOR" xml:space="preserve">
+    <value>冲洗反应器 1 搅拌器</value>
+  </data>
+  <data name="RINSING REACTOR 2 AGITATOR" xml:space="preserve">
+    <value>冲洗反应器 2 搅拌器</value>
+  </data>
+  <data name="STATIC RELAY STATUS" xml:space="preserve">
+    <value>静态继电器状态</value>
+  </data>
+  <data name="COMMAND HEATING" xml:space="preserve">
+    <value>命令加热</value>
+  </data>
+  <data name="RESISTOR CURRENT PHASE" xml:space="preserve">
+    <value>电阻电流相位</value>
+  </data>
+  <data name="STATIC RELAY NOT OK" xml:space="preserve">
+    <value>静态继电器不正常</value>
+  </data>
+  <data name="CURRENT LEAKAGE (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER RESISTOR OFF)" xml:space="preserve">
+    <value>漏电流（电阻关闭后 5 秒电流 &gt; 标称电流的 5%）</value>
+  </data>
+  <data name="CURRENT PHASE" xml:space="preserve">
+    <value>当前阶段</value>
+  </data>
+  <data name="SILO LEVEL SENSOR OK" xml:space="preserve">
+    <value>筒仓液位传感器正常</value>
+  </data>
+  <data name="SILO LEVEL SENSOR NOT OK FOR FILLING" xml:space="preserve">
+    <value>筒仓液位传感器不适合填充</value>
+  </data>
+  <data name="SILO NOT OVERFULL" xml:space="preserve">
+    <value>筒仓未满</value>
+  </data>
+  <data name="SILO OVERFULL" xml:space="preserve">
+    <value>筒仓满溢</value>
+  </data>
+  <data name="AGITATOR (IN FILLING/DISCHARGING)" xml:space="preserve">
+    <value>搅拌器（灌装/卸料时）</value>
+  </data>
+  <data name="BLOWER" xml:space="preserve">
+    <value>鼓风机</value>
+  </data>
+  <data name="SAMPLING" xml:space="preserve">
+    <value>采样</value>
+  </data>
+  <data name="SAMPLE REQUEST" xml:space="preserve">
+    <value>样品请求</value>
+  </data>
+  <data name="(1=REQ)" xml:space="preserve">
+    <value>(1=请求)</value>
+  </data>
+  <data name="LOCAL REQUEST" xml:space="preserve">
+    <value>本地请求</value>
+  </data>
+  <data name="PRESS LOCAL PUSH BUTTON TO TAKE A SAMPLE" xml:space="preserve">
+    <value>按本地按钮取样</value>
+  </data>
+  <data name="PROCESS" xml:space="preserve">
+    <value>过程</value>
+  </data>
+  <data name="BAGS DIVERTER" xml:space="preserve">
+    <value>袋子分流器</value>
+  </data>
+  <data name="BIG BAGS NOT OK FOR LOADING" xml:space="preserve">
+    <value>大袋子不适合装载</value>
+  </data>
+  <data name="BAGS VIEW" xml:space="preserve">
+    <value>包袋查看</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON ON CABINET HMI" xml:space="preserve">
+    <value>机柜 HMI 上的紧急按钮</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON (F-INPUT)" xml:space="preserve">
+    <value>SYS - 紧急按钮（F-输入）</value>
+  </data>
+  <data name="SYS - SURGE VOLTAGE PROTECTION (F-INPUT)" xml:space="preserve">
+    <value>SYS - 浪涌电压保护（F-输入）</value>
+  </data>
+  <data name="SYS - SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS——电涌保护器</value>
+  </data>
+  <data name="SYS - CONTROL MODULE" xml:space="preserve">
+    <value>SYS——控制模块</value>
+  </data>
+  <data name="SYS - CONTROL MODULE RESET" xml:space="preserve">
+    <value>SYS - 控制模块重置</value>
+  </data>
+  <data name="SYS - AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - 交流电涌保护器</value>
+  </data>
+  <data name="SYS - DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>SYS - 直流电涌保护器</value>
+  </data>
+  <data name="SYS - MAIN POWER SWITCH (F-INPUT)" xml:space="preserve">
+    <value>SYS - 主电源开关（F-输入）</value>
+  </data>
+  <data name="SYS - EMERGENCY PUSH BUTTON REDUNDANT F-INPUT" xml:space="preserve">
+    <value>SYS - 紧急按钮冗余 F-INPUT</value>
+  </data>
+  <data name="SYS - COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>SYS - 命令急停接触器通道</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION IN CABINET HMI" xml:space="preserve">
+    <value>机柜人机界面浪涌电压保护</value>
+  </data>
+  <data name="SURGE VOLTAGE PROTECTION (HMI)" xml:space="preserve">
+    <value>浪涌电压保护 (Hmi)</value>
+  </data>
+  <data name="24 VOLTS ANALOG INPUTS OK" xml:space="preserve">
+    <value>24 伏模拟输入正常</value>
+  </data>
+  <data name="SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>电涌保护装置</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE STATUS OK" xml:space="preserve">
+    <value>电源控制模块状态正常</value>
+  </data>
+  <data name="SUPPLY CONTROL MODULE FAULT RESET COMMAND" xml:space="preserve">
+    <value>电源控制模块故障复位命令</value>
+  </data>
+  <data name="SURGE PROTECTION" xml:space="preserve">
+    <value>浪涌保护</value>
+  </data>
+  <data name="OVERLOAD SUPPLY CONTROL MODULE" xml:space="preserve">
+    <value>过载电源控制模块</value>
+  </data>
+  <data name="PROFINET COMMUNICATION BREAKDOWN" xml:space="preserve">
+    <value>Profinet通讯故障</value>
+  </data>
+  <data name="AC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>交流电涌保护器</value>
+  </data>
+  <data name="DC SURGE PROTECTION DEVICE" xml:space="preserve">
+    <value>直流电涌保护器</value>
+  </data>
+  <data name="POWER SWITCH ON" xml:space="preserve">
+    <value>电源开关打开</value>
+  </data>
+  <data name="EMERGENCY PUSH BUTTON REDUNDANT" xml:space="preserve">
+    <value>紧急按钮冗余</value>
+  </data>
+  <data name="COMMAND ESTOP CONTACTOR CHANNEL" xml:space="preserve">
+    <value>命令急停接触器通道</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 0 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>急停按钮 0 - 硬件故障（输入钝化）</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 1 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>急停按钮 1 - 硬件故障（输入钝化）</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON 2 - HARDWARE FAULT (INPUT PASSIVATION)" xml:space="preserve">
+    <value>急停按钮 2 - 硬件故障（输入钝化）</value>
+  </data>
+  <data name="CABINET MAIN POWER SURGE PROTECTION" xml:space="preserve">
+    <value>机柜主电源浪涌保护</value>
+  </data>
+  <data name="CABINET POWER SUPPLY 24VDC SURGE PROTECTION" xml:space="preserve">
+    <value>机柜电源 24Vdc 浪涌保护</value>
+  </data>
+  <data name="POWER ANALYZER" xml:space="preserve">
+    <value>功率分析仪</value>
+  </data>
+  <data name="CABINET LINE HIGH VOLTAGE" xml:space="preserve">
+    <value>柜线高压</value>
+  </data>
+  <data name="CABINET LINE HIGH CURRENT" xml:space="preserve">
+    <value>柜线大电流</value>
+  </data>
+  <data name="CABINET LINE VOLTAGE UNBALANCED" xml:space="preserve">
+    <value>机柜线电压不平衡</value>
+  </data>
+  <data name="CABINET LINE CURRENT UNBALANCED" xml:space="preserve">
+    <value>机柜线路电流不平衡</value>
+  </data>
+  <data name="LINE FREQUENCY OUT OF TOLERANCE" xml:space="preserve">
+    <value>线路频率超出容差</value>
+  </data>
+  <data name="POWER METER GENERAL ALARM" xml:space="preserve">
+    <value>功率计一般报警</value>
+  </data>
+  <data name="LINE VOLTAGE" xml:space="preserve">
+    <value>线电压</value>
+  </data>
+  <data name="AMPLITUDE UNBALANCED" xml:space="preserve">
+    <value>幅度不平衡</value>
+  </data>
+  <data name="LINE CURRENT" xml:space="preserve">
+    <value>线电流</value>
+  </data>
+  <data name="ACTIVE POWER" xml:space="preserve">
+    <value>有功功率</value>
+  </data>
+  <data name="REACTIVE POWER" xml:space="preserve">
+    <value>无功功率</value>
+  </data>
+  <data name="POWER FACTOR (COS-PHI)" xml:space="preserve">
+    <value>功率因数 (Cos-Phi)</value>
+  </data>
+  <data name="LINE FREQUENCY" xml:space="preserve">
+    <value>线路频率</value>
+  </data>
+  <data name="SYSTEM" xml:space="preserve">
+    <value>系统</value>
+  </data>
+  <data name="INFO_POWER_METER_1" xml:space="preserve">
+    <value>检测到机柜电源高电压！联系您的能源供应商</value>
+  </data>
+  <data name="INFO_POWER_METER_2" xml:space="preserve">
+    <value>检测到机柜电源高电流！检查机柜负载</value>
+  </data>
+  <data name="INFO_POWER_METER_3" xml:space="preserve">
+    <value>检测到机柜电源电压不平衡！联系您的能源供应商</value>
+  </data>
+  <data name="INFO_POWER_METER_4" xml:space="preserve">
+    <value>检测到机柜电源电流不平衡！逐相检查所有机柜负载</value>
+  </data>
+  <data name="INFO_POWER_METER_5" xml:space="preserve">
+    <value>机柜功率计故障状态-本地检查并重置故障</value>
+  </data>
+  <data name="INFO_POWER_METER_6" xml:space="preserve">
+    <value>机柜功率计离线故障 - 检查 ProfiNet 与设备的连接</value>
+  </data>
+  <data name="INFO_POWER_METER_7" xml:space="preserve">
+    <value>机柜电源线频率超出容差！联系您的能源供应商</value>
+  </data>
+  <data name="INFO_AMP_12" xml:space="preserve">
+    <value>检查设备，因为在设备关闭时检测到电流循环</value>
+  </data>
+  <data name="INFO_SYS_35" xml:space="preserve">
+    <value>检查 Profinet 电缆、连接器和通信模块电源</value>
+  </data>
 </root>
